--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -6,8 +6,8 @@
 - [1. KVM结构体](#1-kvm结构体)
 - [2. kvm_vcpu结构体](#2-kvm_vcpu结构体)
 - [3. kvm_run结构体](#3-kvm_run结构体)
-- [4. kvm_x86_ops结构体](#4-kvm_x86_ops结构体)
-- [5. 结构体之间的关系](#5-结构体之间的关系)
+- [4. 结构体之间的关系](#4-结构体之间的关系)
+- [5. kvm_x86_ops结构体](#5-kvm_x86_ops结构体)
 - [6. KVM API中重要的结构体](#6-kvm-api中重要的结构体)
   - [6.1. kvm_chardev_ops](#61-kvm_chardev_ops)
   - [6.2. kvm_vm_fops](#62-kvm_vm_fops)
@@ -310,7 +310,95 @@ struct kvm_run {
 
 中断使能标识，如果使用了APIC，则无效
 
-# 4. kvm_x86_ops结构体
+# 4. 结构体之间的关系
+
+先看下相关结构体的相关部分
+
+```cpp
+// include/linux/kvm_host.h
+struct kvm
+{
+    struct kvm_vcpu *vcpus[KVM_MAX_VCPUS];
+    struct list_head vm_list; // 用于挂到全局vm_list列表
+    struct kvm_arch arch; // 平台相关
+}
+```
+
+`struct kvm`代表一个虚拟机, 包含多个vcpu
+
+```cpp
+// include/linux/kvm_host.h
+struct kvm_vcpu {
+	int cpu;    /*运行当前VCPU的物理CPU编号*/
+}
+```
+
+`struct kvm_vcpu`代表一个vCPU, 
+
+```cpp
+// arch/x86/kvm/vmx/vmx.h
+struct vcpu_vmx {
+	struct kvm_vcpu       vcpu;
+	/*
+	 * loaded_vmcs points to the VMCS currently used in this vcpu. For a
+	 * non-nested (L1) guest, it always points to vmcs01. For a nested
+	 * guest (L2), it points to a different VMCS.
+	 */
+	struct loaded_vmcs    vmcs01;
+	struct loaded_vmcs   *loaded_vmcs;
+}
+```
+
+`struct vcpu_vmx` 
+
+```cpp
+// arch/x86/kvm/vmx/vmcs.h
+struct loaded_vmcs {
+	struct vmcs *vmcs;  /*本VCPU对应的VMCS*/
+	int cpu;            /*上一次运行的CPU编号*/
+	int launched;
+	struct list_head loaded_vmcss_on_cpu_link;
+};
+```
+
+VMX其实是**VCPU**的**一个运行环境**，理解为environment。
+
+通过**loaded\_vmcs**和**vcpu**成员将**vmcs**和**CPU**关联起来。
+
+**一个VCPU**当然可以运行在**不同的物理CPU**之上，只要更换`loaded_vmcs`中**cpu编号**即可；
+
+但是为什么会**一个VCPU**对应**多个不同的VMCS**呢？其实是因为**嵌套虚拟化**的原因，当**L2虚拟机**的**VCPU加载**后，**VCPU**所使用的**VMCS不是L1层的VMCS**；而是L2层的VMCS；其实就是把L1的VCPU在L2中当做了物理CPU用，物理CPU当然可以有多个VMCS了。
+
+![2019-12-18-16-51-15.png](./images/2019-12-18-16-51-15.png)
+
+一般L1中，loaded_vmcs就执行vmcs01，当VCPU运行的物理CPU发生切换的时候，修改loaded_vmcs中的cpu成员即可
+
+```cpp
+static struct kvm_vcpu *vmx_create_vcpu(struct kvm *kvm, unsigned int id)
+{
+ 
+    /*vmcs的分配*/
+	vmx->loaded_vmcs = &vmx->vmcs01;
+	vmx->loaded_vmcs->vmcs = alloc_vmcs();
+ 
+}
+```
+
+在L2中，loaded_vmcs会在L1 VMCS和各个L2 VMCS之间切换，那么就需要修改loaded_vmcs指针的指向
+
+```cpp
+static int nested_vmx_run(struct kvm_vcpu *vcpu, bool launch)
+{
+	cpu = get_cpu();
+	vmx->loaded_vmcs = vmcs02;
+	vmx_vcpu_put(vcpu);
+	vmx_vcpu_load(vcpu, cpu);
+	vcpu->cpu = cpu;
+	put_cpu();
+}
+```
+
+# 5. kvm_x86_ops结构体
 
 kvm\_x86\_ops结构体中包含了针对**具体的CPU架构**进行**虚拟化时**的**函数指针调用**，其定义在Linux内核文件的`arch/x86/include/asm/kvm_host.h`中。
 
@@ -371,78 +459,6 @@ EXPORT_SYMBOL_GPL(kvm_x86_ops);
 ```
 
 有关该结构的各个成员的详细说明，将在后文针对 KVM 的初始化和其他关键过程的分析过程中进行详细阐述。
-
-# 5. 结构体之间的关系
-
-先看下相关结构体的相关部分
-
-```cpp
-// arch/x86/kvm/vmx/vmx.h
-struct vcpu_vmx {
-	struct kvm_vcpu       vcpu;
-	/*
-	 * loaded_vmcs points to the VMCS currently used in this vcpu. For a
-	 * non-nested (L1) guest, it always points to vmcs01. For a nested
-	 * guest (L2), it points to a different VMCS.
-	 */
-	struct loaded_vmcs    vmcs01;
-	struct loaded_vmcs   *loaded_vmcs;
-}
-```
-
-```cpp
-// include/linux/kvm_host.h
-struct kvm_vcpu {
-	int cpu;    /*运行当前VCPU的物理CPU编号*/
-}
-```
-
-```cpp
-// arch/x86/kvm/vmx/vmcs.h
-struct loaded_vmcs {
-	struct vmcs *vmcs;  /*本VCPU对应的VMCS*/
-	int cpu;            /*上一次运行的CPU编号*/
-	int launched;
-	struct list_head loaded_vmcss_on_cpu_link;
-};
-```
-
-VMX其实是**VCPU**的**一个运行环境**，理解为environment。
-
-通过**loaded\_vmcs**和**vcpu**成员将**vmcs**和**CPU**关联起来。
-
-**一个VCPU**当然可以运行在**不同的物理CPU**之上，只要更换`loaded_vmcs`中**cpu编号**即可；
-
-但是为什么会**一个VCPU**对应**多个不同的VMCS**呢？其实是因为**嵌套虚拟化**的原因，当**L2虚拟机**的**VCPU加载**后，**VCPU**所使用的**VMCS不是L1层的VMCS**；而是L2层的VMCS；其实就是把L1的VCPU在L2中当做了物理CPU用，物理CPU当然可以有多个VMCS了。
-
-![2019-12-18-16-51-15.png](./images/2019-12-18-16-51-15.png)
-
-一般L1中，loaded_vmcs就执行vmcs01，当VCPU运行的物理CPU发生切换的时候，修改loaded_vmcs中的cpu成员即可
-
-```cpp
-static struct kvm_vcpu *vmx_create_vcpu(struct kvm *kvm, unsigned int id)
-{
- 
-    /*vmcs的分配*/
-	vmx->loaded_vmcs = &vmx->vmcs01;
-	vmx->loaded_vmcs->vmcs = alloc_vmcs();
- 
-}
-```
-
-在L2中，loaded_vmcs会在L1 VMCS和各个L2 VMCS之间切换，那么就需要修改loaded_vmcs指针的指向
-
-```cpp
-static int nested_vmx_run(struct kvm_vcpu *vcpu, bool launch)
-{
-	cpu = get_cpu();
-	vmx->loaded_vmcs = vmcs02;
-	vmx_vcpu_put(vcpu);
-	vmx_vcpu_load(vcpu, cpu);
-	vcpu->cpu = cpu;
-	put_cpu();
-}
-```
 
 # 6. KVM API中重要的结构体
 
