--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -333,7 +333,7 @@ struct kvm_vcpu {
 }
 ```
 
-`struct kvm_vcpu`代表一个vCPU, 
+`struct kvm_vcpu`代表一个vCPU, 同一个时刻只能对应一个物理CPU
 
 ```cpp
 // arch/x86/kvm/vmx/vmx.h
