--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/2. CPUID指令的术语和表达.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/2. CPUID指令的术语和表达.md
@@ -36,4 +36,4 @@ cpuid
 
 ![config](./images/1.png)
 
-上面是判断处理器**是否支持PAE（Physical Address Extensions）功能**时的描述，当CPUID.01H：EDX\[6]的值为1时，表示支持PAE功能。
+上面是判断处理器**是否支持PAE（Physical Address Extensions）功能**时的描述，当`CPUID.01H：EDX[6]`的值为1时，表示支持PAE功能。
