--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -349,7 +349,7 @@ struct vcpu_vmx {
 }
 ```
 
-`struct vcpu_vmx`代表vcpu的一个运行环境
+`struct vcpu_vmx`代表vcpu的一个运行环境, `loaded_vmcs`指向当前vcpu使用的vmcs. 对于非嵌套(即L1)虚拟机, `loaded_vmcs`一直指向`vmcs01`, 对于嵌套(L2), 指向另外的vmcs.
 
 ```cpp
 // arch/x86/kvm/vmx/vmcs.h
