--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -356,10 +356,14 @@ struct vcpu_vmx {
 struct loaded_vmcs {
 	struct vmcs *vmcs;  /*本VCPU对应的VMCS*/
 	int cpu;            /*上一次运行的CPU编号*/
-	int launched;
+	int launched;		/* 是否被这个cpu加载过一次*/
 	struct list_head loaded_vmcss_on_cpu_link;
 };
 ```
+
+
+
+
 
 `vcpu_vmx`其实是**VCPU**的**一个运行环境**，理解为environment。通过**loaded\_vmcs**和**vcpu**成员将**vmcs**和**CPU**关联起来。
 
