--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -356,8 +356,8 @@ struct vcpu_vmx {
 struct loaded_vmcs {
 	struct vmcs *vmcs;  /*本VCPU对应的VMCS*/
 	int cpu;            /*上一次运行的CPU编号*/
-	int launched;		/* 是否被这个cpu加载过一次*/
-	struct list_head loaded_vmcss_on_cpu_link;
+	int launched;		/* 是否被这个cpu加载*/
+	struct list_head loaded_vmcss_on_cpu_link;	/* 这个cpu上的所有vmcs链表, 在cpu down时候清理*/
 };
 ```
 
