--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -24,8 +24,10 @@
 ```cpp
 // include/linux/kvm_host.h
 struct kvm {
+	// 保护mmu的spinlock
 	spinlock_t mmu_lock;
 	struct mutex slots_lock;
+	// 指向qemu用户态进程的mm_struct
 	struct mm_struct *mm; /* userspace tied to this vm */
 	struct kvm_memslots *memslots[KVM_ADDRESS_SPACE_NUM];
 	struct srcu_struct srcu;
@@ -97,13 +99,17 @@ struct kvm {
 
 KVM虚拟机所分配到的**内存slot**，
 
-以**数组形式**存储这些**slot的地址信息**。用于GPA转成HVA, 内存虚拟化.
+以**数组形式**存储这些**slot的地址信息**。用于**GPA转成HVA**, 内存虚拟化.
+
+`kvm_mem_slot`是kvm内存管理相关主要数据结构，用来表示**虚拟机GPA**和**主机HVA**之间的**映射关系**，一个`kvm_mem_slot`表示一段**内存区域(slot)的映射关系**.
+
+`kvm_memslots`结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slot`的数组，对应于**该虚拟机**使用的**所有内存区域(slot**)。
 
 * `struct kvm_vcpu *vcpus[KVM_MAX_VCPUS]`;
 
 KVM虚拟机中包含的**vCPU结构体**，
 
-**一个虚拟CPU**对应**一个vCPU结构体**。
+**一个vCPU**对应**一个数组成员**。
 
 * `struct list_head vm_list;`
 
