--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -40,12 +40,14 @@ struct kvm {
 	 * incremented after storing the kvm_vcpu pointer in vcpus,
 	 * and is accessed atomically.
 	 */
+	// online的vcpu数量
 	atomic_t online_vcpus;
 	int created_vcpus;
 	int last_boosted_vcpu;
 	struct list_head vm_list;
 	struct mutex lock;
 	struct kvm_io_bus *buses[KVM_NR_BUSES];
+	//事件通道相关
 #ifdef CONFIG_HAVE_KVM_EVENTFD
 	struct {
 		spinlock_t        lock;
@@ -57,6 +59,7 @@ struct kvm {
 #endif
 	struct kvm_vm_stat stat;
 	struct kvm_arch arch;
+	// 引用计数
 	atomic_t users_count;
 #ifdef KVM_COALESCED_MMIO_PAGE_OFFSET
 	struct kvm_coalesced_mmio_ring *coalesced_mmio_ring;
@@ -69,6 +72,7 @@ struct kvm {
 	/*
 	 * Update side is protected by irq_lock.
 	 */
+	// irq相关部分
 	struct kvm_irq_routing_table __rcu *irq_routing;
 #endif
 #ifdef CONFIG_HAVE_KVM_IRQFD
@@ -76,10 +80,12 @@ struct kvm {
 #endif
 
 #if defined(CONFIG_MMU_NOTIFIER) && defined(KVM_ARCH_WANT_MMU_NOTIFIER)
+	// mmu通知链
 	struct mmu_notifier mmu_notifier;
 	unsigned long mmu_notifier_seq;
 	long mmu_notifier_count;
 #endif
+	// dirty tlb数量
 	long tlbs_dirty;
 	struct list_head devices;
 	struct dentry *debugfs_dentry;
@@ -107,7 +113,7 @@ KVM虚拟机所分配到的**内存slot**，
 
 * `struct kvm_vcpu *vcpus[KVM_MAX_VCPUS]`;
 
-KVM虚拟机中包含的**vCPU结构体**，
+KVM虚拟机中包含的**vCPU结构体数组**，
 
 **一个vCPU**对应**一个数组成员**。
 
@@ -117,7 +123,7 @@ Host上的VM管理链表
 
 * `struct kvm_io_bus *buses[KVM_NR_BUSES]`;
 
-KVM虚拟机中的**I/O总线**
+KVM虚拟机中的**I/O总线结构体数组**
 
 **一条总线**对应一个**kvm\_io\_bus结构体**，如**ISA总线**、**PCI总线**。
 
@@ -129,7 +135,7 @@ KVM虚拟机中的**页表**、**MMU**等**运行时状态信息**。
 
 * `struct kvm_arch arch`;
 
-KVM 的软件 **arch** 方面所需要的一些参数，
+KVM 的**arch** 方面所需要的一些参数，
 
 将在后文讨论 KVM 的实现机理时详细叙述。
 
