--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -194,40 +194,48 @@ static int kvm_dev_ioctl_create_vm(unsigned long type)
 
 ### 3.1.1. kvm_create_vm流程
 
-kvm\_create\_vm的相关流程
+虚拟机创建的主要函数
 
-```c
+```cpp
 // virt/kvm/kvm_main.c
 static struct kvm *kvm_create_vm(unsigned long type)
 {
 	int r, i;
+	/* 
+     * 分配kvm结构体，一个虚拟机对应一个kvm结构，其中包括了虚拟机中的
+     * 关键系统，比如内存、中断、VCPU、总线等信息，该结构体也是kvm的关键结
+     * 构体之一
+     */
 	struct kvm *kvm = kvm_arch_alloc_vm();
-
+	//  // 初始化kvm结构中的架构相关部分，比如中断
 	r = kvm_arch_init_vm(kvm, type);
-
+	// 硬件使能，最终调用架构相关的kvm_x86_ops->hardware_enable()接口
 	r = hardware_enable_all();
-
+	// 分配memslots结构，并初始化为0
 	kvm->memslots = kzalloc(sizeof(struct kvm_memslots), GFP_KERNEL);
-    
+    // 初始化内存槽位(slot)的id信息，便于后续索引
 	kvm_init_memslots_id(kvm);
 	if (init_srcu_struct(&kvm->srcu))
 		goto out_err_nosrcu;
+	// 初始化虚拟机的bus信息
 	for (i = 0; i < KVM_NR_BUSES; i++) {
 		kvm->buses[i] = kzalloc(sizeof(struct kvm_io_bus),
 					GFP_KERNEL);
 		if (!kvm->buses[i])
 			goto out_err;
 	}
-
+	// 初始化mmu_lock
 	spin_lock_init(&kvm->mmu_lock);
+	// 设置虚拟机的mm(mm_struct)为当前进程的mm
 	kvm->mm = current->mm;
 	atomic_inc(&kvm->mm->mm_count);
-
+	// 初始化事件通道
 	kvm_eventfd_init(kvm);
-
+	// 初始化mmu操作的通知链
 	r = kvm_init_mmu_notifier(kvm);
 
 	raw_spin_lock(&kvm_lock);
+	// 将新创建的虚拟机的kvm结构，加入到全局链表vm_list中
 	list_add(&kvm->vm_list, &vm_list);
 	raw_spin_unlock(&kvm_lock);
 
