--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -4,21 +4,21 @@
 <!-- code_chunk_output -->
 
 - [1. KVM模块初始化流程](#1-kvm模块初始化流程)
-- [QEMU与KVM交互](#qemu与kvm交互)
-- [2. /dev/kvm的ioctl接口kvm_dev_ioctl](#2-devkvm的ioctl接口kvm_dev_ioctl)
-- [3. 虚拟机的创建](#3-虚拟机的创建)
-  - [3.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#31-虚拟机创建过程kvm_dev_ioctl_create_vm)
-    - [3.1.1. kvm_create_vm流程](#311-kvm_create_vm流程)
-    - [3.1.2. 返回kvm_vm的fd文件描述符](#312-返回kvm_vm的fd文件描述符)
-- [4. 虚拟机fd的ioctl接口kvm_vm_ioctl](#4-虚拟机fd的ioctl接口kvm_vm_ioctl)
-- [5. vCPU的创建](#5-vcpu的创建)
-  - [5.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu](#51-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
-    - [5.1.1. kvm_arch_vcpu_create创建kvm_vcpu](#511-kvm_arch_vcpu_create创建kvm_vcpu)
-    - [5.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu](#512-kvm_arch_vcpu_setup初始化kvm_vcpu)
-    - [5.1.3. vCPU检测](#513-vcpu检测)
-    - [5.1.4. 创建vcpu_fd](#514-创建vcpu_fd)
-    - [5.1.5. 释放内核锁和返回vcpu_fd](#515-释放内核锁和返回vcpu_fd)
-- [6. vCPU的运行](#6-vcpu的运行)
+- [2. QEMU与KVM交互](#2-qemu与kvm交互)
+- [3. /dev/kvm的ioctl接口kvm_dev_ioctl](#3-devkvm的ioctl接口kvm_dev_ioctl)
+- [4. 虚拟机的创建](#4-虚拟机的创建)
+  - [4.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#41-虚拟机创建过程kvm_dev_ioctl_create_vm)
+    - [4.1.1. kvm_create_vm流程](#411-kvm_create_vm流程)
+    - [4.1.2. 返回kvm_vm的fd文件描述符](#412-返回kvm_vm的fd文件描述符)
+- [5. 虚拟机fd的ioctl接口kvm_vm_ioctl](#5-虚拟机fd的ioctl接口kvm_vm_ioctl)
+- [6. vCPU的创建](#6-vcpu的创建)
+  - [6.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu](#61-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
+    - [6.1.1. kvm_arch_vcpu_create创建kvm_vcpu](#611-kvm_arch_vcpu_create创建kvm_vcpu)
+    - [6.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu](#612-kvm_arch_vcpu_setup初始化kvm_vcpu)
+    - [6.1.3. vCPU检测](#613-vcpu检测)
+    - [6.1.4. 创建vcpu_fd](#614-创建vcpu_fd)
+    - [6.1.5. 释放内核锁和返回vcpu_fd](#615-释放内核锁和返回vcpu_fd)
+- [7. vCPU的运行](#7-vcpu的运行)
 
 <!-- /code_chunk_output -->
 
@@ -54,7 +54,7 @@ KVM的初始化步骤分为以下三步。
 
 3）进行后续的硬件初始化准备操作。
 
-# QEMU与KVM交互
+# 2. QEMU与KVM交互
 
 KVM内核模块加载之后只提供了一个对外接口/dev/kvm，qemu通过/dev/kvm文件依次创建vm句柄和vcpu句柄来和kvm交互。
 
@@ -92,7 +92,7 @@ kvm_init_vcpu(env);
 
 ```
 
-# 2. /dev/kvm的ioctl接口kvm_dev_ioctl
+# 3. /dev/kvm的ioctl接口kvm_dev_ioctl
 
 在上面初始化中调用了`misc_register(&kvm_dev);`注册了`/dev/kvm`
 
@@ -136,15 +136,35 @@ out:
 }
 ```
 
-# 3. 虚拟机的创建
+# 4. 虚拟机的创建
 
 基于KVM的虚拟机创建分为**虚拟机创建**和**虚拟CPU创建**两个步骤。
 
 在下文的描述中，**虚拟机**对应的**文件描述符**为**vm\_fd**，**虚拟CPU**对应的**文件描述符**为**vcpu\_fd**。
 
-## 3.1. 虚拟机创建过程kvm_dev_ioctl_create_vm
+**打开/dev/kvm** 文件并且获得**文件描述符 fd** 后，通过 `kvm_dev_ioctl` 指令写入KVM\_CREATE\_VM，即可创建一个 VM 虚拟机。
 
-**打开/dev/kvm** 文件并且获得**文件描述符 fd** 后，通过 ioctl 指令写入KVM\_CREATE\_VM，即可创建一个 VM 虚拟机。
+整体流程如下:
+
+```
+用户态ioctl(fd,KVM_CREATE_VM,..)
+    内核态kvm_dev_ioctl()
+        kvm_dev_ioctl_create_vm()
+            kvm_create_vm() //实现虚拟机创建的主要函数
+                kvm_arch_alloc_vm() // 分配kvm结构体
+                kvm_arch_init_vm() // 初始化kvm结构中的架构相关部分，比如中断
+                hardware_enable_all() // 使能硬件，架构相关操作
+                    hardware_enable_nolock
+                        kvm_arch_hardware_enable()
+                            kvm_x86_ops->hardware_enable()
+                kzalloc() // 分配memslots结构，并初始化为0
+                kvm_init_memslots_id() // 初始化内存槽位(slot)的id信息
+                kvm_eventfd_init() // 初始化事件通道
+                kvm_init_mmu_notifier() // 初始化mmu操作的通知链
+                list_add(&kvm->vm_list, &vm_list) // 将新创建的虚拟机的kvm结构，加入到全局链表vm_list中
+```
+
+## 4.1. 虚拟机创建过程kvm_dev_ioctl_create_vm
 
 KVM 的**该部分代码**实现在**kvm\_dev** 的 **file\_operation 结构体**中，对应的代码在 **kvm\_main.c** 中调用 **kvm\_dev\_ioctl\_create\_vm**函数实现，其代码如下：
 
@@ -192,7 +212,7 @@ static int kvm_dev_ioctl_create_vm(unsigned long type)
 
 **KVM 结构体**如前文所述，保存了**虚拟机运行的上下文**及**其他相关状态**，在**使用之前**，需要进行**一定的初始化**工作。
 
-### 3.1.1. kvm_create_vm流程
+### 4.1.1. kvm_create_vm流程
 
 虚拟机创建的主要函数
 
@@ -272,7 +292,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 接下来，将初始化 KVM 的 **memslot 结构体**、**Bus 总线结构体信息**、**scru读/写锁信息**、**eventfd事件通知信息**、**mmu内存管理结构体**信息。
 
-### 3.1.2. 返回kvm_vm的fd文件描述符
+### 4.1.2. 返回kvm_vm的fd文件描述符
 
 然后，调用 **anon\_inode\_getfd** 函数。
 
@@ -291,7 +311,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 通过anon\_inode\_getfd获得的**fd文件描述符**，就是供**用户态**使用的**vm\_fd**，用户态将通过该fd进行进一步的虚拟机操作，首先要做的事情是**初始化vCPU**。
 
-# 4. 虚拟机fd的ioctl接口kvm_vm_ioctl
+# 5. 虚拟机fd的ioctl接口kvm_vm_ioctl
 
 上面调用后会得到虚拟机的fd, 对应的ioctl是`kvm_vm_ioctl()`
 
@@ -301,7 +321,7 @@ static long kvm_vm_ioctl(struct file *filp,
 			   unsigned int ioctl, unsigned long arg)
 ```
 
-# 5. vCPU的创建
+# 6. vCPU的创建
 
 创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为**kvm\_vcpu**。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。kvm\_vcpu中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
 
@@ -314,7 +334,7 @@ static long kvm_vm_ioctl(struct file *filp,
 - 初始化 kvm\_vcpu 的**状态信息**，设置 kvm\_vcpu 在被调度前需要配置的必要标志。
 - 初始化额外的信息，并且配置**apic等虚拟化组件**。
 
-## 5.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
+## 6.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
 
 接下来讲述KVM中**vCPU的创建过程**。
 
@@ -379,7 +399,7 @@ static long kvm_vm_ioctl(struct file *filp,
 (1418)   }
 ```
 
-### 5.1.1. kvm_arch_vcpu_create创建kvm_vcpu
+### 6.1.1. kvm_arch_vcpu_create创建kvm_vcpu
 
 首先，在1371行，调用**kvm\_arch\_vcpu\_create**函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的create\_vcpu方法执行。
 
@@ -393,32 +413,32 @@ static long kvm_vm_ioctl(struct file *filp,
 - 接着**初始化MSR！！！** 和**VMCS！！！等寄存器**，(**每个VCPU都有**)
 - 最后完成**I/O**和**内存部分寄存器的初始化**，为被**初次调度运行**做好准备。
 
-### 5.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
+### 6.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
 
 其次，在1377行调用**kvm\_arch\_vcpu\_setup**函数对**kvm\_vcpu**中的数据结构进行**初始化**。
 
 这里将先调用**kvm\_x86\_ops**中的**put\_vcpu函数**，实现将**vCPU的参数信息**加载入**CPU**中，并且执行**MMU初始化**和**CPU复位操作**。
 
-### 5.1.3. vCPU检测
+### 6.1.3. vCPU检测
 
 在 1381～1391 行中，进行了**两个检测**。
 
 - 第一个是检测到如果**当前的 vCPU数量**已经达到了**系统设置的上限** **KVM\_MAX\_VCPU**，则将销毁刚才创建的实例。
 - 第二个是如果**当前的vCPU**创建出来已经加入了**某一个已有的KVM主机**，则也将销毁该实例。
 
-### 5.1.4. 创建vcpu_fd
+### 6.1.4. 创建vcpu_fd
 
 然后，在 1396～1405 行，会创建**当前 vCPU** 对应的文件描述符 **vcpu\_fd**，并且将**kvm\_vcpu**添加入**KVM**的**vCPU数组**中。
 
 这里有一个特别之处，是使用了 atom\_read 和 atom\_inc 宏，这两个宏能够保证在进行 KVM 虚拟机的 vCPU添加时按照给定的顺序，不会因为执行中途的中断、进程切换等方式导致添加到不正确的kvm\_vcpu数组中。
 
-### 5.1.5. 释放内核锁和返回vcpu_fd
+### 6.1.5. 释放内核锁和返回vcpu_fd
 
 最后，释放掉所有的内核锁，完成本次vCPU的创建工作。
 
 返回**vcpu\_fd**
 
-# 6. vCPU的运行
+# 7. vCPU的运行
 
 在创建完**VM**和**vCPU**并且完成了**初始化工作**之后，就可以通过**调度程序调度执行**。因为在Linux中，KVM虚拟机作为一个**系统线程**运行，因此，KVM虚拟机的调度程序实际上也就是Linux的调度程序，具体的调度将在后文qemu部分进行讨论，在当前，**KVM的调用**是从ioctl的**KVM\_RUN指令**字开始的。
 
