--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -142,7 +142,9 @@ out:
 
 在下文的描述中，**虚拟机**对应的**文件描述符**为**vm\_fd**，**虚拟CPU**对应的**文件描述符**为**vcpu\_fd**。
 
-**打开/dev/kvm** 文件并且获得**文件描述符 fd** 后，通过 `kvm_dev_ioctl` 指令写入KVM\_CREATE\_VM，即可创建一个 VM 虚拟机。
+**打开/dev/kvm** 文件并且获得**文件描述符 fd** 后，通过 `kvm_dev_ioctl` 指令写入`KVM_CREATE_VM`，即可创建一个 VM 虚拟机。
+
+对`虚拟机(VM)`来说，**kvm结构体**是关键，**一个虚拟机**对应**一个kvm结构体**，虚拟机的创建过程实质为**kvm结构体的创建**和**初始化过程**。
 
 整体流程如下:
 
