--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -332,15 +332,18 @@ static long kvm_vm_ioctl(struct file *filp,
 **kvm\_vcpu的初始化**也是一个类似的过程，将 **kvm\_vcpu 的各个数据结构体**设置成为可用的状态，通常需要包含如下内容。
 
 - 分配**vCPU标识**，设置cpu\_id属于哪个KVM虚拟机，并且分配对该vCPU的**唯一标识符**。
-- 初始化**虚拟寄存器组**。
-- 初始化 kvm\_vcpu 的**状态信息**，设置 kvm\_vcpu 在被调度前需要配置的必要标志。
-- 初始化额外的信息，并且配置**apic等虚拟化组件**。
-
-## 6.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
+- 初始化**虚拟寄存器组**, 在VT-x下, 这些信息包含在VMCS中
+- 初始化 kvm\_vcpu 的**状态信息**，标识白VCPU当前所处的状态(睡眠、运行等)，主要供调度器使用。
+- 寄存器/部件信息，主要指未包含在VMCS中的寄存器或CPU部件，比如：浮点寄存器和虚拟的LAPIC等。
+- 用户VMM进行优化或存储额外信息的字段，如：存放该VCPU私有数据的指针。
 
 接下来讲述KVM中**vCPU的创建过程**。
 
 在获得了**fd\_vm**之后，通过**ioctl**调用**KVM\_CREATE\_VCPU指令**，可以对该fd\_vm对应的虚拟机**创建vCPU**，其入口函数地址在**kvm\_vm\_ioctl**函数(virt/kvm/kvm\_main.c)中，通过switch之后，程序流程将选择进入**kvm\_vm\_ioctl\_create\_vcpu**函数中进行处理，其代码如下。
+
+基本
+
+## 6.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
 
 代码5-10 kvm\_vm_ioctl\_create\_vcpu代码
 
