--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -149,7 +149,67 @@ kvm\_vcpu结构体中的字段较多，其中重要的成员如下。
 
 ```cpp
 // include/linux/kvm_host.h
-struct kvm_vcpu
+struct kvm_vcpu {
+    // 指向此vcpu所属的虚拟机对应的kvm结构
+    struct kvm *kvm;
+#ifdef CONFIG_PREEMPT_NOTIFIERS
+    struct preempt_notifier preempt_notifier;
+#endif
+    int cpu;
+    // vcpu id，用于唯一标识该vcpu
+    int vcpu_id;
+    int srcu_idx;
+    int mode;
+    unsigned long requests;
+    unsigned long guest_debug;
+
+    struct mutex mutex;
+    // 执行虚拟机对应的kvm_run结构
+    struct kvm_run *run;
+
+    int fpu_active;
+    int guest_fpu_loaded, guest_xcr0_loaded;
+    wait_queue_head_t wq;
+    struct pid *pid;
+    int sigset_active;
+    sigset_t sigset;
+    // vcpu状态信息
+    struct kvm_vcpu_stat stat;
+    // mmio相关部分
+#ifdef CONFIG_HAS_IOMEM
+    int mmio_needed;
+    int mmio_read_completed;
+    int mmio_is_write;
+    int mmio_cur_fragment;
+    int mmio_nr_fragments;
+    struct kvm_mmio_fragment mmio_fragments[KVM_MAX_MMIO_FRAGMENTS];
+#endif
+
+#ifdef CONFIG_KVM_ASYNC_PF
+    struct {
+        u32 queued;
+        struct list_head queue;
+        struct list_head done;
+        spinlock_t lock;
+    } async_pf;
+#endif
+
+#ifdef CONFIG_HAVE_KVM_CPU_RELAX_INTERCEPT
+    /*
+     * Cpu relax intercept or pause loop exit optimization
+     * in_spin_loop: set when a vcpu does a pause loop exit
+     * or cpu relax intercepted.
+     * dy_eligible: indicates whether vcpu is eligible for directed yield.
+     */
+    struct {
+        bool in_spin_loop;
+        bool dy_eligible;
+    } spin_loop;
+#endif
+    bool preempted;
+    // 架构相关部分，包括的寄存器、apic、mmu相关等架构相关的内容
+    struct kvm_vcpu_arch arch;
+};
 ```
 
 * `struct kvm *kvm;`
