--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -166,6 +166,8 @@ out:
                 list_add(&kvm->vm_list, &vm_list) // 将新创建的虚拟机的kvm结构，加入到全局链表vm_list中
 ```
 
+kvm结构体见上节
+
 ## 4.1. 虚拟机创建过程kvm_dev_ioctl_create_vm
 
 KVM 的**该部分代码**实现在**kvm\_dev** 的 **file\_operation 结构体**中，对应的代码在 **kvm\_main.c** 中调用 **kvm\_dev\_ioctl\_create\_vm**函数实现，其代码如下：
@@ -341,9 +343,22 @@ static long kvm_vm_ioctl(struct file *filp,
 
 在获得了**fd\_vm**之后，通过**ioctl**调用**KVM\_CREATE\_VCPU指令**，可以对该fd\_vm对应的虚拟机**创建vCPU**，其入口函数地址在**kvm\_vm\_ioctl**函数(virt/kvm/kvm\_main.c)中，通过switch之后，程序流程将选择进入**kvm\_vm\_ioctl\_create\_vcpu**函数中进行处理，其代码如下。
 
-基本
+基本流程
+
+```
+kvm_vm_ioctl() // kvm ioctl vm指令入口
+    kvm_vm_ioctl_create_vcpu() // 为虚拟机创建VCPU的ioctl调用的入口函数
+        kvm_arch_vcpu_create() // 创建vcpu结构，架构相关，对于intel x86来说，最终调用vmx_create_vcpu
+        kvm_arch_vcpu_setup() // 设置VCPU结构
+        create_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
+        kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
+```
+
+kvm_vcpu结构体见上节
 
 ## 6.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
+
+虚拟机创建VCPU的ioctl调用的入口函数，本质为创建vcpu结构并初始化，并将其填入kvm结构中。
 
 代码5-10 kvm\_vm_ioctl\_create\_vcpu代码
 
@@ -353,13 +368,17 @@ static long kvm_vm_ioctl(struct file *filp,
 (1367)   {￼
 (1368)        int r;￼
 (1369)        struct kvm_vcpu *vcpu, *v;￼
-(1370)￼
+(1370)        // 创建vcpu结构，架构相关，对于intel x86来说，最终调用vmx_create_vcpu
 (1371)        vcpu = kvm_arch_vcpu_create(kvm, id);￼
 (1372)        if (IS_ERR(vcpu))￼
 (1373)             return PTR_ERR(vcpu);￼
 (1374)￼
 (1375)        preempt_notifier_init(&vcpu->preempt_notifier, &kvm_preempt_ops);￼
-(1376)￼
+(1376)            /* 
+     * 设置vcpu结构，主要调用kvm_x86_ops->vcpu_load，KVM虚拟机VCPU数据结构载入物理CPU，
+     * 并进行虚拟机mmu相关设置，比如进行ept页表的相关初始工作或影子页表
+     * 相关的设置。
+     */￼
 (1377)        r = kvm_arch_vcpu_setup(vcpu);￼
 (1378)        if (r)￼
 (1379)             return r;￼
@@ -369,32 +388,39 @@ static long kvm_vm_ioctl(struct file *filp,
 (1383)             r = -EINVAL;￼
 (1384)             goto vcpu_destroy;￼
 (1385)        }￼
-(1386)￼
+(1386)￼        // 检测分配的vcpu id是否已经存在
 (1387)        kvm_for_each_vcpu(r, v, kvm)￼
 (1388)             if (v->vcpu_id == id) {￼
 (1389)                  r = -EEXIST;￼
 (1390)                  goto vcpu_destroy;￼
 (1391)             }￼
-(1392)￼
+(1392)￼             /* kvm->vcpus[]数组包括该vm的所有vcpu，定义为KVM_MAX_VCPUS大小的数组。
+     * 在kvm结构初始化时，其中所有成员都初始化为0，在vcpu还没有
+     * 分配之前，如果不为0，那就是bug了。
+     */
 (1393)        BUG_ON(kvm->vcpus[atomic_read(&kvm->online_vcpus)]);￼
 (1394)￼
 (1395)        /* Now it's all set up, let userspace reach it */￼
+		      // 增加kvm的引用计数
 (1396)        kvm_get_kvm(kvm);￼
+			 // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
 (1397)        r = create_vcpu_fd(vcpu);￼
 (1398)        if (r < 0) {￼
 (1399)             kvm_put_kvm(kvm);￼
 (1400)             goto vcpu_destroy;￼
 (1401)        }￼
-(1402)￼
+(1402)￼        // 将新创建的vcpu填入kvm->vcpus[]数组中
 (1403)        kvm->vcpus[atomic_read(&kvm->online_vcpus)] = vcpu;￼
-(1404)        smp_wmb();￼
-(1405)        atomic_inc(&kvm->online_vcpus);￼
+(1404)        smp_wmb();￼ // 内存屏障，防止同时访问kvm结构时乱序
+(1405)        atomic_inc(&kvm->online_vcpus);￼ // 增加online vcpu的数量
 (1406)￼
 (1407)   #ifdef CONFIG_KVM_APIC_ARCHITECTURE￼
 (1408)        if (kvm->bsp_vcpu_id == id)￼
 (1409)             kvm->bsp_vcpu = vcpu;￼
 (1410)   #endif￼
 (1411)        mutex_unlock(&kvm->lock);￼
+    // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
+(1412)        kvm_arch_vcpu_postcreate(vcpu);
 (1412)        return r;￼
 (1413)￼
 (1414)   vcpu_destroy:￼
