--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -419,15 +419,15 @@ kvm_vcpu结构体见上节
 (1409)             kvm->bsp_vcpu = vcpu;￼
 (1410)   #endif￼
 (1411)        mutex_unlock(&kvm->lock);￼
-    // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
-(1412)        kvm_arch_vcpu_postcreate(vcpu);
-(1412)        return r;￼
-(1413)￼
-(1414)   vcpu_destroy:￼
-(1415)        mutex_unlock(&kvm->lock);￼
-(1416)        kvm_arch_vcpu_destroy(vcpu);￼
-(1417)        return r;￼
-(1418)   }
+(1412)        // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
+(1413)        kvm_arch_vcpu_postcreate(vcpu);
+(1414)        return r;￼
+(1415)￼
+(1416)   vcpu_destroy:￼
+(1417)        mutex_unlock(&kvm->lock);￼
+(1418)        kvm_arch_vcpu_destroy(vcpu);￼
+(1419)        return r;￼
+(1420)   }
 ```
 
 ### 6.1.1. kvm_arch_vcpu_create创建kvm_vcpu
@@ -444,11 +444,149 @@ kvm_vcpu结构体见上节
 - 接着**初始化MSR！！！** 和**VMCS！！！等寄存器**，(**每个VCPU都有**)
 - 最后完成**I/O**和**内存部分寄存器的初始化**，为被**初次调度运行**做好准备。
 
+kvm_vm_ioctl() --> kvm_vm_ioctl_create_vcpu() -->kvm_arch_vcpu_create()--> kvm_x86_ops->vcpu_create() --> vmx_create_vcpu():
+
+```cpp
+/*
+  * Intel x86架构中创建并初始化VCPU中架构相关部分
+  */
+static struct kvm_vcpu *vmx_create_vcpu(struct kvm *kvm, unsigned int id)
+{
+    int err;
+    // 从slab中，分配vcpu_vmx结构体，其中包括VMX技术硬件相关信息。
+    struct vcpu_vmx *vmx = kmem_cache_zalloc(kvm_vcpu_cache, GFP_KERNEL);
+    int cpu;
+
+    if (!vmx)
+        return ERR_PTR(-ENOMEM);
+    // 分配vpid，vpid为VCPU的唯一标识。
+    allocate_vpid(vmx);
+    // 初始化vmx中的vcpu结构
+    err = kvm_vcpu_init(&vmx->vcpu, kvm, id);
+    if (err)
+        goto free_vcpu;
+    // 分配Guest的msr寄存器保存区
+    vmx->guest_msrs = kmalloc(PAGE_SIZE, GFP_KERNEL);
+    err = -ENOMEM;
+    if (!vmx->guest_msrs) {
+        goto uninit_vcpu;
+    }
+
+    vmx->loaded_vmcs = &vmx->vmcs01;
+    /* 
+     * 分配VMCS结构，该结构用于保存虚拟机和虚拟机监控器的系统编程接口状态。
+     * 当执行VM exit和VM entry操作时，VT-x自动根据VMCS中的内容完成虚拟机和虚拟机监
+     * 控器间的系统编程接口状态切换。
+     */
+    vmx->loaded_vmcs->vmcs = alloc_vmcs();
+    if (!vmx->loaded_vmcs->vmcs)
+        goto free_msrs;
+    // 是否设置了vmm_exclusive
+    if (!vmm_exclusive)
+        // VMXON指令用于开启VMX模式
+        kvm_cpu_vmxon(__pa(per_cpu(vmxarea, raw_smp_processor_id())));
+    loaded_vmcs_init(vmx->loaded_vmcs);
+    if (!vmm_exclusive)
+        // VMXON指令用于关闭VMX模式
+        kvm_cpu_vmxoff();
+    // 当前cpu
+    cpu = get_cpu();
+    // KVM虚拟机VCPU数据结构载入物理CPU
+    vmx_vcpu_load(&vmx->vcpu, cpu);
+    vmx->vcpu.cpu = cpu;
+    // 设置vmx相关信息
+    err = vmx_vcpu_setup(vmx);
+    vmx_vcpu_put(&vmx->vcpu);
+    put_cpu();
+    if (err)
+        goto free_vmcs;
+    if (vm_need_virtualize_apic_accesses(kvm)) {
+        err = alloc_apic_access_page(kvm);
+        if (err)
+            goto free_vmcs;
+    }
+    // 是否支持EPT
+    if (enable_ept) {
+        if (!kvm->arch.ept_identity_map_addr)
+            kvm->arch.ept_identity_map_addr =
+                VMX_EPT_IDENTITY_PAGETABLE_ADDR;
+        err = -ENOMEM;
+        // 分配identity页表
+        if (alloc_identity_pagetable(kvm) != 0)
+            goto free_vmcs;
+        // 初始化identity页表
+        if (!init_rmode_identity_map(kvm))
+            goto free_vmcs;
+    }
+
+    vmx->nested.current_vmptr = -1ull;
+    vmx->nested.current_vmcs12 = NULL;
+
+    return &vmx->vcpu;
+
+free_vmcs:
+    free_loaded_vmcs(vmx->loaded_vmcs);
+free_msrs:
+    kfree(vmx->guest_msrs);
+uninit_vcpu:
+    kvm_vcpu_uninit(&vmx->vcpu);
+free_vcpu:
+    free_vpid(vmx);
+    kmem_cache_free(kvm_vcpu_cache, vmx);
+    return ERR_PTR(err);
+}
+```
+
 ### 6.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
 
 其次，在1377行调用**kvm\_arch\_vcpu\_setup**函数对**kvm\_vcpu**中的数据结构进行**初始化**。
 
 这里将先调用**kvm\_x86\_ops**中的**put\_vcpu函数**，实现将**vCPU的参数信息**加载入**CPU**中，并且执行**MMU初始化**和**CPU复位操作**。
+
+kvm_vm_ioctl() --> kvm_vm_ioctl_create_vcpu() --> kvm_arch_vcpu_setup():
+
+```cpp
+int kvm_arch_vcpu_setup(struct kvm_vcpu *vcpu)
+{
+    int r;
+
+    vcpu->arch.mtrr_state.have_fixed = 1;
+    // KVM虚拟机VCPU数据结构载入物理CPU
+    r = vcpu_load(vcpu);
+    if (r)
+        return r;
+    // vcpu重置，包括相关寄存器、时钟、pmu等，最终调用vmx_vcpu_reset
+    kvm_vcpu_reset(vcpu);
+    /*
+     * 进行虚拟机mmu相关设置，比如进行ept页表的相关初始工作或影子页表
+     * 相关的设置。
+     */
+    r = kvm_mmu_setup(vcpu);
+    vcpu_put(vcpu);
+
+    return r;
+}
+```
+
+kvm_vm_ioctl() --> kvm_vm_ioctl_create_vcpu() --> kvm_arch_vcpu_setup() --> kvm_mmu_setup() -->init_kvm_mmu():
+
+```cpp
+static int init_kvm_mmu(struct kvm_vcpu *vcpu)
+{
+    // NPT(Nested page table，AMD x86硬件提供的内存虚拟化技术，相当于Intel中的EPT技术)相关初始化
+    if (mmu_is_nested(vcpu))
+        return init_kvm_nested_mmu(vcpu);
+    /* 
+     * EPT(Extended page table，Intel x86硬件提供的内存虚拟化技术)相关初始化
+     * 主要是设置一些函数指针，其中比较重要的如缺页异常处理函数
+     */
+    else if (tdp_enabled)
+        return init_kvm_tdp_mmu(vcpu);
+    // 影子页表(软件实现内存虚拟化技术)相关初始化
+    else
+        return init_kvm_softmmu(vcpu);
+}
+```
 
 ### 6.1.3. vCPU检测
 
