--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -7,18 +7,28 @@
 - [2. QEMU与KVM交互](#2-qemu与kvm交互)
 - [3. /dev/kvm的ioctl接口kvm_dev_ioctl](#3-devkvm的ioctl接口kvm_dev_ioctl)
 - [4. 虚拟机的创建](#4-虚拟机的创建)
-  - [4.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#41-虚拟机创建过程kvm_dev_ioctl_create_vm)
-    - [4.1.1. kvm_create_vm流程](#411-kvm_create_vm流程)
-    - [4.1.2. 返回kvm_vm的fd文件描述符](#412-返回kvm_vm的fd文件描述符)
+  - [4.1. 基本原理](#41-基本原理)
+  - [4.2. 基本流程](#42-基本流程)
+  - [4.3. 代码分析](#43-代码分析)
+    - [4.3.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#431-虚拟机创建过程kvm_dev_ioctl_create_vm)
+      - [4.3.1.1. kvm_create_vm流程](#4311-kvm_create_vm流程)
+      - [4.3.1.2. 返回kvm_vm的fd文件描述符](#4312-返回kvm_vm的fd文件描述符)
 - [5. 虚拟机fd的ioctl接口kvm_vm_ioctl](#5-虚拟机fd的ioctl接口kvm_vm_ioctl)
 - [6. vCPU的创建](#6-vcpu的创建)
-  - [6.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu](#61-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
-    - [6.1.1. kvm_arch_vcpu_create创建kvm_vcpu](#611-kvm_arch_vcpu_create创建kvm_vcpu)
-    - [6.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu](#612-kvm_arch_vcpu_setup初始化kvm_vcpu)
-    - [6.1.3. vCPU检测](#613-vcpu检测)
-    - [6.1.4. 创建vcpu_fd](#614-创建vcpu_fd)
-    - [6.1.5. 释放内核锁和返回vcpu_fd](#615-释放内核锁和返回vcpu_fd)
-- [7. vCPU的运行](#7-vcpu的运行)
+  - [6.1. 基本原理](#61-基本原理)
+  - [6.2. 基本流程](#62-基本流程)
+  - [6.3. 代码分析](#63-代码分析)
+    - [6.3.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu](#631-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
+      - [6.3.1.1. kvm_arch_vcpu_create创建kvm_vcpu](#6311-kvm_arch_vcpu_create创建kvm_vcpu)
+      - [6.3.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu](#6312-kvm_arch_vcpu_setup初始化kvm_vcpu)
+      - [6.3.1.3. vCPU检测](#6313-vcpu检测)
+      - [6.3.1.4. 创建vcpu_fd](#6314-创建vcpu_fd)
+      - [6.3.1.5. 释放内核锁和返回vcpu_fd](#6315-释放内核锁和返回vcpu_fd)
+- [7. KVM_SET_USER_MEMORY_REGION流程](#7-kvm_set_user_memory_region流程)
+  - [7.1. 基本原理](#71-基本原理)
+  - [7.2. 基本流程](#72-基本流程)
+  - [7.3. 代码分析](#73-代码分析)
+- [8. vCPU的运行](#8-vcpu的运行)
 
 <!-- /code_chunk_output -->
 
@@ -138,6 +148,8 @@ out:
 
 # 4. 虚拟机的创建
 
+## 4.1. 基本原理
+
 基于KVM的虚拟机创建分为**虚拟机创建**和**虚拟CPU创建**两个步骤。
 
 在下文的描述中，**虚拟机**对应的**文件描述符**为**vm\_fd**，**虚拟CPU**对应的**文件描述符**为**vcpu\_fd**。
@@ -145,6 +157,8 @@ out:
 **打开/dev/kvm** 文件并且获得**文件描述符 fd** 后，通过 `kvm_dev_ioctl` 指令写入`KVM_CREATE_VM`，即可创建一个 VM 虚拟机。
 
 对`虚拟机(VM)`来说，**kvm结构体**是关键，**一个虚拟机**对应**一个kvm结构体**，虚拟机的创建过程实质为**kvm结构体的创建**和**初始化过程**。
+
+## 4.2. 基本流程
 
 整体流程如下:
 
@@ -166,9 +180,11 @@ out:
                 list_add(&kvm->vm_list, &vm_list) // 将新创建的虚拟机的kvm结构，加入到全局链表vm_list中
 ```
 
+## 4.3. 代码分析
+
 kvm结构体见上节
 
-## 4.1. 虚拟机创建过程kvm_dev_ioctl_create_vm
+### 4.3.1. 虚拟机创建过程kvm_dev_ioctl_create_vm
 
 KVM 的**该部分代码**实现在**kvm\_dev** 的 **file\_operation 结构体**中，对应的代码在 **kvm\_main.c** 中调用 **kvm\_dev\_ioctl\_create\_vm**函数实现，其代码如下：
 
@@ -216,7 +232,7 @@ static int kvm_dev_ioctl_create_vm(unsigned long type)
 
 **KVM 结构体**如前文所述，保存了**虚拟机运行的上下文**及**其他相关状态**，在**使用之前**，需要进行**一定的初始化**工作。
 
-### 4.1.1. kvm_create_vm流程
+#### 4.3.1.1. kvm_create_vm流程
 
 虚拟机创建的主要函数
 
@@ -296,7 +312,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 接下来，将初始化 KVM 的 **memslot 结构体**、**Bus 总线结构体信息**、**scru读/写锁信息**、**eventfd事件通知信息**、**mmu内存管理结构体**信息。
 
-### 4.1.2. 返回kvm_vm的fd文件描述符
+#### 4.3.1.2. 返回kvm_vm的fd文件描述符
 
 然后，调用 **anon\_inode\_getfd** 函数。
 
@@ -327,6 +343,8 @@ static long kvm_vm_ioctl(struct file *filp,
 
 # 6. vCPU的创建
 
+## 6.1. 基本原理
+
 创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为**kvm\_vcpu**。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。kvm\_vcpu中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
 
 在物理CPU上电之后，需要进一步初始化才可以使用。在这个过程中，硬件会自动将CPU初始化成特定的状态。
@@ -343,7 +361,7 @@ static long kvm_vm_ioctl(struct file *filp,
 
 在获得了**fd\_vm**之后，通过**ioctl**调用**KVM\_CREATE\_VCPU指令**，可以对该fd\_vm对应的虚拟机**创建vCPU**，其入口函数地址在**kvm\_vm\_ioctl**函数(virt/kvm/kvm\_main.c)中，通过switch之后，程序流程将选择进入**kvm\_vm\_ioctl\_create\_vcpu**函数中进行处理，其代码如下。
 
-基本流程
+## 6.2. 基本流程
 
 ```
 kvm_vm_ioctl() // kvm ioctl vm指令入口
@@ -354,9 +372,11 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
         kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
 ```
 
+## 6.3. 代码分析
+
 kvm_vcpu结构体见上节
 
-## 6.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
+### 6.3.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
 
 虚拟机创建VCPU的ioctl调用的入口函数，本质为创建vcpu结构并初始化，并将其填入kvm结构中。
 
@@ -430,7 +450,7 @@ kvm_vcpu结构体见上节
 (1420)   }
 ```
 
-### 6.1.1. kvm_arch_vcpu_create创建kvm_vcpu
+#### 6.3.1.1. kvm_arch_vcpu_create创建kvm_vcpu
 
 首先，在1371行，调用**kvm\_arch\_vcpu\_create**函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的create\_vcpu方法执行。
 
@@ -537,7 +557,7 @@ free_vcpu:
 }
 ```
 
-### 6.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
+#### 6.3.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
 
 其次，在1377行调用**kvm\_arch\_vcpu\_setup**函数对**kvm\_vcpu**中的数据结构进行**初始化**。
 
@@ -568,7 +588,7 @@ int kvm_arch_vcpu_setup(struct kvm_vcpu *vcpu)
 }
 ```
 
-kvm_vm_ioctl() --> kvm_vm_ioctl_create_vcpu() --> kvm_arch_vcpu_setup() --> kvm_mmu_setup() -->init_kvm_mmu():
+kvm_vm_ioctl() --> kvm_vm_ioctl_create_vcpu() --> kvm_arch_vcpu_setup() --> kvm_mmu_setup() --> init_kvm_mmu():
 
 ```cpp
 static int init_kvm_mmu(struct kvm_vcpu *vcpu)
@@ -588,26 +608,57 @@ static int init_kvm_mmu(struct kvm_vcpu *vcpu)
 }
 ```
 
-### 6.1.3. vCPU检测
+#### 6.3.1.3. vCPU检测
 
 在 1381～1391 行中，进行了**两个检测**。
 
 - 第一个是检测到如果**当前的 vCPU数量**已经达到了**系统设置的上限** **KVM\_MAX\_VCPU**，则将销毁刚才创建的实例。
 - 第二个是如果**当前的vCPU**创建出来已经加入了**某一个已有的KVM主机**，则也将销毁该实例。
 
-### 6.1.4. 创建vcpu_fd
+#### 6.3.1.4. 创建vcpu_fd
 
 然后，在 1396～1405 行，会创建**当前 vCPU** 对应的文件描述符 **vcpu\_fd**，并且将**kvm\_vcpu**添加入**KVM**的**vCPU数组**中。
 
 这里有一个特别之处，是使用了 atom\_read 和 atom\_inc 宏，这两个宏能够保证在进行 KVM 虚拟机的 vCPU添加时按照给定的顺序，不会因为执行中途的中断、进程切换等方式导致添加到不正确的kvm\_vcpu数组中。
 
-### 6.1.5. 释放内核锁和返回vcpu_fd
+#### 6.3.1.5. 释放内核锁和返回vcpu_fd
 
 最后，释放掉所有的内核锁，完成本次vCPU的创建工作。
 
 返回**vcpu\_fd**
 
-# 7. vCPU的运行
+# 7. KVM_SET_USER_MEMORY_REGION流程
+
+## 7.1. 基本原理
+
+如之前分析，kvm虚拟机实际运行于qemu-kvm的进程上下文中，因此，需要建立虚拟机的物理内存空间(GPA)与qemu-kvm进程的虚拟地址空间(HVA)的映射关系。
+
+虚拟机的**物理地址空间**实际也是**不连续**的，分成不同的内存区域(slot)，因为物理地址空间中通常还包括BIOS、MMIO、显存、ISA保留等部分。
+
+qemu-kvm通过ioctl vm指令KVM_SET_USER_MEMORY_REGION来为虚拟机设置内存。主要建立guest物理地址空间中的内存区域与qemu-kvm虚拟地址空间中的内存区域的映射，从而建立其从GVA到HVA的对应关系，该对应关系主要通过kvm_mem_slot结构体保存，所以实质为设置kvm_mem_slot结构体。
+
+本文简介ioctl vm指令KVM_SET_USER_MEMORY_REGION在内核中的执行流程，qemu-kvm用户态部分暂不包括。
+
+## 7.2. 基本流程
+
+ioctl vm指令KVM_SET_USER_MEMORY_REGION在内核主要执行流程如下：
+
+```
+kvm_vm_ioctl()
+    kvm_vm_ioctl_set_memory_region()
+        kvm_set_memory_region()
+            __kvm_set_memory_region()
+                kvm_iommu_unmap_pages() // 原来的slot需要删除，所以需要unmap掉相应的内存区域
+                install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
+                kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
+```
+
+## 7.3. 代码分析
+
+
+
+
+# 8. vCPU的运行
 
 在创建完**VM**和**vCPU**并且完成了**初始化工作**之后，就可以通过**调度程序调度执行**。因为在Linux中，KVM虚拟机作为一个**系统线程**运行，因此，KVM虚拟机的调度程序实际上也就是Linux的调度程序，具体的调度将在后文qemu部分进行讨论，在当前，**KVM的调用**是从ioctl的**KVM\_RUN指令**字开始的。
 
