--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -1,6 +1,28 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-# 整体介绍
+<!-- code_chunk_output -->
+
+- [1. 整体介绍](#1-整体介绍)
+- [2. kvm_init: 初始化kvm框架](#2-kvm_init-初始化kvm框架)
+  - [2.1. 架构初始化](#21-架构初始化)
+    - [2.1.1. 支持的检查](#211-支持的检查)
+  - [2.2. 硬件配置](#22-硬件配置)
+    - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
+      - [2.2.1.1. 设置全局vmcs_config和vmx_capability](#2211-设置全局vmcs_config和vmx_capability)
+  - [2.3. 检查处理器对vmx的兼容性](#23-检查处理器对vmx的兼容性)
+  - [2.4. 注册CPU状态变化的通知函数](#24-注册cpu状态变化的通知函数)
+  - [2.5. 注册reboot时候的通知函数](#25-注册reboot时候的通知函数)
+  - [2.6. 分配内存](#26-分配内存)
+  - [2.7. 赋值file_operations的模块名](#27-赋值file_operations的模块名)
+  - [2.8. 注册设备文件/dev/kvm](#28-注册设备文件devkvm)
+  - [2.9. 动作注册](#29-动作注册)
+  - [2.10. debugfs初始化](#210-debugfs初始化)
+- [3. 参考](#3-参考)
+
+<!-- /code_chunk_output -->
+
+# 1. 整体介绍
 
 核心数据结构和主要流程见:
 
@@ -51,7 +73,7 @@ vmx_init()                               // 初始化入口
  └─ vmx_check_vmcs12_offsets()
 ```
 
-# kvm_init: 初始化kvm框架
+# 2. kvm_init: 初始化kvm框架
 
 在`virt/kvm/kvm_main.c`中
 
@@ -65,7 +87,7 @@ r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx)
 
 正式进行KVM框架初始化
 
-## 架构初始化
+## 2.1. 架构初始化
 
 使用传入的`vmx_x86_ops`参数, 注意这是`void *`类型的
 
@@ -73,17 +95,17 @@ r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx)
 r = kvm_arch_init(opaque);
 ```
 
-### 支持的检查
+### 2.1.1. 支持的检查
 
 先功能性检查, 
 
-## 硬件配置
+## 2.2. 硬件配置
 
-### vmx/svm的硬件配置hardware_setup()
+### 2.2.1. vmx/svm的硬件配置hardware_setup()
 
 实际上调用的是 `kvm_x86_ops->hardware_setup()`
 
-#### 设置全局vmcs_config和vmx_capability
+#### 2.2.1.1. 设置全局vmcs_config和vmx_capability
 
 ```cpp
 if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
@@ -92,7 +114,7 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 
 
 
-## 检查处理器对vmx的兼容性
+## 2.3. 检查处理器对vmx的兼容性
 
 ```cpp
 for_each_online_cpu(cpu) {
@@ -106,7 +128,7 @@ for_each_online_cpu(cpu) {
 
 最终调用`vmx_check_processor_compat`, 检查处理器的兼容性
 
-## 注册CPU状态变化的通知函数
+## 2.4. 注册CPU状态变化的通知函数
 
 ```cpp
 r = cpuhp_setup_state_nocalls(CPUHP_AP_KVM_STARTING, "kvm/cpu:starting",
@@ -169,7 +191,7 @@ static void hardware_disable_nolock(void *junk)
 }
 ```
 
-## 注册reboot时候的通知函数
+## 2.5. 注册reboot时候的通知函数
 
 原理同上, 重启的时候会调用这个函数
 
@@ -177,7 +199,7 @@ static void hardware_disable_nolock(void *junk)
 register_reboot_notifier(&kvm_reboot_notifier);
 ```
 
-## 分配内存
+## 2.6. 分配内存
 
 根据注释, 主要为了满足fx_save的对齐要求
 
@@ -193,7 +215,7 @@ kvm_vcpu_cache =
                     NULL);
 ```
 
-## 赋值file_operations的模块名
+## 2.7. 赋值file_operations的模块名
 
 把早先传给kvm_init()的参数THIS_MODULE,也就是vmx的模块名分别赋值给三个file operation结构体变量:
 
@@ -235,7 +257,7 @@ static struct file_operations kvm_chardev_ops = {
 };
 ```
 
-## 注册设备文件/dev/kvm
+## 2.8. 注册设备文件/dev/kvm
 
 ```cpp
 misc_register(&kvm_dev);
@@ -259,7 +281,7 @@ static struct miscdevice kvm_dev = {
 };
 ```
 
-## 动作注册
+## 2.9. 动作注册
 
 ```cpp
 register_syscore_ops(&kvm_syscore_ops);
@@ -297,7 +319,7 @@ static __read_mostly struct preempt_ops kvm_preempt_ops;
 
 从命名看, `sched_in`和`sched_out`可以申请调度器对任务的换入换出.
 
-## debugfs初始化
+## 2.10. debugfs初始化
 
 ```cpp
 kvm_init_debug();
@@ -333,6 +355,6 @@ static int kvm_init_debug(void)
 struct kvm_stats_debugfs_item debugfs_entries[] = {
 ```
 
-# 参考
+# 3. 参考
 
 https://www.haodong.org/kvm%E6%BA%90%E4%BB%A3%E7%A0%81%E9%98%85%E8%AF%BB%E7%AC%94%E8%AE%B0/
