--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第9章 其它高级功能/5. qemu命令行参数.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第9章 其它高级功能/5. qemu命令行参数.md
@@ -3,69 +3,71 @@
 
 <!-- code_chunk_output -->
 
-* [1 回顾已用过的参数](#1-回顾已用过的参数)
-	* [1.1 qemu命令基本格式](#11-qemu命令基本格式)
-	* [1.2 CPU相关的参数](#12-cpu相关的参数)
-		* [1.2.1 \-cpu参数](#121-cpu参数)
-		* [1.2.2 \-smp参数](#122-smp参数)
-	* [1.3 内存相关的参数](#13-内存相关的参数)
-		* [1.3.1 \-m megs参数](#131-m-megs参数)
-		* [1.3.2 \-mem\-path path参数](#132-mem-path-path参数)
-		* [1.3.3 \-mem\-prealloc参数](#133-mem-prealloc参数)
-		* [1.3.4 \-balloon开启内存气球](#134-balloon开启内存气球)
-	* [1.4 磁盘相关的参数](#14-磁盘相关的参数)
-		* [1.4.1 \-hda、\-hdb和\-cdrom等参数](#141-hda-hdb和-cdrom等参数)
-		* [1.4.2 \-drive参数](#142-drive参数)
-		* [1.4.3 \-boot参数](#143-boot参数)
-	* [1.5 网络相关的参数](#15-网络相关的参数)
-		* [1.5.1 \-net nic参数](#151-net-nic参数)
-		* [1.5.2 \-net user或\-netdev user参数](#152-net-user或-netdev-user参数)
-		* [1.5.3 \-net tap或\-netdev tap/bridge参数](#153-net-tap或-netdev-tapbridge参数)
-		* [1.5.4 \-net dump参数](#154-net-dump参数)
-		* [1.5.5 \-net none参数](#155-net-none参数)
-	* [1.6 图形显示相关的参数](#16-图形显示相关的参数)
-		* [1.6.1 \-sdl参数](#161-sdl参数)
-		* [1.6.2 \-vnc参数](#162-vnc参数)
-		* [1.6.3 \-vga参数](#163-vga参数)
-		* [1.6.4 \-nographic参数](#164-nographic参数)
-	* [1.7 VT\-d和SR\-IOV相关的参数](#17-vt-d和sr-iov相关的参数)
-	* [1.8 动态迁移的参数](#18-动态迁移的参数)
-	* [1.9 已使用的其他参数](#19-已使用的其他参数)
-		* [1.9.1 \-daemonize参数](#191-daemonize参数)
-		* [1.9.2 \-usb参数](#192-usb参数)
-		* [1.9.3 \-enable\-kvm参数](#193-enable-kvm参数)
-* [2 其他常用参数](#2-其他常用参数)
-	* [2.1 \-h显示帮助](#21-h显示帮助)
-	* [2.2 \-version版本信息](#22-version版本信息)
-	* [2.3 \-k键盘布局的语言](#23-k键盘布局的语言)
-	* [2.4 \-soundhw声卡硬件支持](#24-soundhw声卡硬件支持)
-	* [2.5 \-display显示方式](#25-display显示方式)
-	* [2.6 -name客户机名称](#26-name客户机名称)
-	* [2.7 \-uuid系统UUID](#27-uuid系统uuid)
-	* [2.8 \-rtc设置RTC开始时间和时钟类型](#28-rtc设置rtc开始时间和时钟类型)
-	* [2.9 存储设备URL](#29-存储设备url)
-		* [2.9.1 iSCSI的URL语法](#291-iscsi的url语法)
-		* [2.9.2 NBD的URL语法](#292-nbd的url语法)
-		* [2.9.3 sheepdog的URL语法](#293-sheepdog的url语法)
-	* [2.10 \-chardev字符型设备](#210-chardev字符型设备)
-	* [2.11 \-bios客户机的BIOS文件](#211-bios客户机的bios文件)
-	* [2.12 \-no\-reboot和\-no\-shutdown参数](#212-no-reboot和-no-shutdown参数)
-	* [2.13 \-loadvm加载快照状态](#213-loadvm加载快照状态)
-	* [2.14 \-pidfile保存进程ID到文件](#214-pidfile保存进程id到文件)
-	* [2.15 \-nodefaults不创建默认的设备](#215-nodefaults不创建默认的设备)
-	* [2.16 \-readconfig和\-writeconfig: 设备配置的文件读写](#216-readconfig和-writeconfig-设备配置的文件读写)
-	* [2.17 \-nodefconfig和\-no\-user\-config](#217-nodefconfig和-no-user-config)
-	* [2.18 Linux或多重启动相关的参数](#218-linux或多重启动相关的参数)
-	* [2.19 \-serial串口重定向](#219-serial串口重定向)
-	* [2.20 调试相关的参数](#220-调试相关的参数)
+- [回顾已用过的参数](#回顾已用过的参数)
+  - [qemu命令基本格式](#qemu命令基本格式)
+  - [CPU相关的参数](#cpu相关的参数)
+    - [-cpu参数](#-cpu参数)
+    - [-smp参数](#-smp参数)
+  - [内存相关的参数](#内存相关的参数)
+    - [-m megs参数](#-m-megs参数)
+    - [-mem-path path参数](#-mem-path-path参数)
+    - [-mem-prealloc参数](#-mem-prealloc参数)
+    - [-balloon开启内存气球](#-balloon开启内存气球)
+  - [磁盘相关的参数](#磁盘相关的参数)
+    - [-hda、-hdb和-cdrom等参数](#-hda-hdb和-cdrom等参数)
+    - [-drive参数](#-drive参数)
+    - [-boot参数](#-boot参数)
+  - [网络相关的参数](#网络相关的参数)
+    - [-net nic参数](#-net-nic参数)
+    - [-net user或-netdev user参数](#-net-user或-netdev-user参数)
+    - [-net tap或-netdev tap/bridge参数](#-net-tap或-netdev-tapbridge参数)
+    - [-net dump参数](#-net-dump参数)
+    - [-net none参数](#-net-none参数)
+  - [图形显示相关的参数](#图形显示相关的参数)
+    - [-sdl参数](#-sdl参数)
+    - [-vnc参数](#-vnc参数)
+    - [-vga参数](#-vga参数)
+    - [-nographic参数](#-nographic参数)
+  - [VT-d和SR-IOV相关的参数](#vt-d和sr-iov相关的参数)
+  - [动态迁移的参数](#动态迁移的参数)
+  - [已使用的其他参数](#已使用的其他参数)
+    - [-daemonize参数](#-daemonize参数)
+    - [-usb参数](#-usb参数)
+    - [-enable-kvm参数](#-enable-kvm参数)
+- [其他常用参数](#其他常用参数)
+  - [-h显示帮助](#-h显示帮助)
+  - [-version版本信息](#-version版本信息)
+  - [-k键盘布局的语言](#-k键盘布局的语言)
+  - [-soundhw声卡硬件支持](#-soundhw声卡硬件支持)
+  - [-display显示方式](#-display显示方式)
+  - [-name客户机名称](#-name客户机名称)
+  - [-uuid系统UUID](#-uuid系统uuid)
+  - [-rtc设置RTC开始时间和时钟类型](#-rtc设置rtc开始时间和时钟类型)
+  - [存储设备URL](#存储设备url)
+    - [iSCSI的URL语法](#iscsi的url语法)
+    - [NBD的URL语法](#nbd的url语法)
+    - [sheepdog的URL语法](#sheepdog的url语法)
+  - [-chardev字符型设备](#-chardev字符型设备)
+  - [-bios客户机的BIOS文件](#-bios客户机的bios文件)
+  - [-no-reboot和-no-shutdown参数](#-no-reboot和-no-shutdown参数)
+  - [-loadvm加载快照状态](#-loadvm加载快照状态)
+  - [-pidfile保存进程ID到文件](#-pidfile保存进程id到文件)
+  - [2.15 \-nodefaults不创建默认的设备](#215-nodefaults不创建默认的设备)
+  - [2.16 \-readconfig和\-writeconfig: 设备配置的文件读写](#216-readconfig和-writeconfig-设备配置的文件读写)
+  - [2.17 \-nodefconfig和\-no\-user\-config](#217-nodefconfig和-no-user-config)
+  - [2.18 Linux或多重启动相关的参数](#218-linux或多重启动相关的参数)
+  - [2.19 \-serial串口重定向](#219-serial串口重定向)
+  - [2.20 调试相关的参数](#220-调试相关的参数)
 
 <!-- /code_chunk_output -->
 
-用户使用QEMU/KVM时，一般有两个途径与客户机进行交互和配置，一个途径是通过前一节介绍的QEMU monitor，另一个就是通过qemu命令行。用户通过qemu命令行启动个客户机，并通过qemu命令行的各种参数来配置客户机。前面各个章节在介绍KVM的某个功能时一般都会提及qemu命令行启动时使用什么参数来达到什么效果。本节将会简单总结一些之前用过的qemu命令行参数，然后介绍另外一些未曾介绍过的重要参数的用法和功能。
+用户使用QEMU/KVM时，一般有**两个途径**与客户机进行**交互**和配置，一个途径是通过前一节介绍的**QEMU monitor**，另一个就是通过**qemu命令行**。
 
-# 1 回顾已用过的参数
+用户通过qemu命令行启动个客户机，并通过qemu命令行的各种参数来配置客户机。前面各个章节在介绍KVM的某个功能时一般都会提及qemu命令行启动时使用什么参数来达到什么效果。本节将会简单总结一些之前用过的qemu命令行参数，然后介绍另外一些未曾介绍过的重要参数的用法和功能。
 
-## 1.1 qemu命令基本格式
+# 回顾已用过的参数
+
+## qemu命令基本格式
 
 一般来说x86_64平台上的qemu的命令行格式如下：
 
@@ -75,9 +77,9 @@ qemu-system-x86_64 [options] [disk_image]
 
 其中，options是各种选项、参数，disk\_image是客户机的磁盘镜像文件（默认被挂载为第一个IDE磁盘设备）。而关于disk\_imgage的写法也是多种多样的，如可以通过“\-hda”参数使用IDE磁盘，也可以用“\-driver”参数来提供磁盘镜像，在少数情况下也可以没有磁盘镜像参数。
 
-## 1.2 CPU相关的参数
+## CPU相关的参数
 
-### 1.2.1 \-cpu参数
+### -cpu参数
 
 （1）-cpu参数
 
@@ -87,7 +89,7 @@ qemu-system-x86_64 [options] [disk_image]
 
 如果想尽可能多地将**宿主机的CPU特性暴露给客户机**使用，则可以使用“\-cpu host”参数。当然，使用“\-cpu host”参数会带来**动态迁移的限制**，**不允许**客户机在**不同的CPU硬件**上**迁移**。
 
-### 1.2.2 \-smp参数
+### -smp参数
 
 （2）-smp参数
 
@@ -97,95 +99,95 @@ qemu-system-x86_64 [options] [disk_image]
 
 设置客户机总共有n个逻辑CPU，并设置了其中CPU socket的数量、每个Socket上核心（core）的数量、每个核心上的线程（theread）数量。其中：n=sockets×cores×threads。
 
-## 1.3 内存相关的参数
+## 内存相关的参数
 
 与内存相关的参数如下：
 
-### 1.3.1 \-m megs参数
+### -m megs参数
 
 （1）\-m megs参数
 
 设置客户机内存大小为megs MB。**默认单位为MB**，如“\-m 1024”就表示1024MB内存。也可以使用G来表示以GB为单位的内存大小，如“\-m 4G”表示4GB内存大小。
 
-### 1.3.2 \-mem\-path path参数
+### -mem-path path参数
 
 （2）\-mem\-path path参数
 
 从path路径表示的**临时文件**中为**客户机分配内存**，主要是**分配大页内存**（如2 MB大页），如“\-mem\-path/dev/hugepages”。可以参考7.1节。
 
-### 1.3.3 \-mem\-prealloc参数
+### -mem-prealloc参数
 
 （3）\-mem\-prealloc参数
 
 **启动时**即分配**全部的内存**，而不是根据客户机请求而动态分配。此参数必须与“\-**mem\-path**”参数**一起使用**。
 
-### 1.3.4 \-balloon开启内存气球
+### -balloon开启内存气球
 
 （4）\-balloon开启内存气球的设置
 
 “\-balloon virtio”为客户机提供virtio\_balloon设备，从而通过内存气球balloon，可以在QEMU monitor中用“balloon”命令来调节客户机占用内存的大小（在qemu命令行启动时的“\-m”参数设置的内存范围内）。
 
-## 1.4 磁盘相关的参数
+## 磁盘相关的参数
 
 与磁盘相关的参数如下：
 
-### 1.4.1 \-hda、\-hdb和\-cdrom等参数
+### -hda、-hdb和-cdrom等参数
 
 （1）\-hda、\-hdb和\-cdrom等参数
 
 设置客户机的IDE磁盘和光盘设备。如“\-hda rhel6u3.img”将rhel6u3.img镜像文件作为客户机的第一个IDE磁盘。
 
-### 1.4.2 \-drive参数
+### -drive参数
 
 （2）\-drive参数
 
 详细地配置一个**驱动器**，如：在介绍半虚拟化驱动时，用到过“\-drive file=rhel7.img，if=virtio”的参数配置使用virtio\-block驱动来支持该磁盘文件。
 
-### 1.4.3 \-boot参数
+### -boot参数
 
 （3）\-boot参数
 
 设置客户机启动时的各种选项（包括启动顺序等），如：在介绍客户机系统的安装时，使用到“\-boot order=dc-hda rhel7.img \-cdrom rhel7.iso”参数，让rhel7.img（未安装系统）文件作为IDE磁盘，安装光盘rhel7.iso作为IDE光驱，并且从光盘启动客户机，从而让客户机进入系统安装的流程中。
 
-## 1.5 网络相关的参数
+## 网络相关的参数
 
 与网络相关的参数如下：
 
-### 1.5.1 \-net nic参数
+### -net nic参数
 
 （1）\-net nic参数
 
 为客户机创建一个网卡（NIC），凡是使用QEMU模拟的网卡作为客户机网络设备的情况都应该使用该参数。当然，如果用VT\-d方式将宿主机网卡直接分配给客户机使用，则不需要“\-net nic”参数。
 
-### 1.5.2 \-net user或\-netdev user参数
+### -net user或-netdev user参数
 
 （2）\-net user或\-netdev user参数
 
 让客户机使用不需要管理员权限的用户模式网络（user mode network），如“\-net nic\–net user”（详见5.5.4节）。
 
-### 1.5.3 \-net tap或\-netdev tap/bridge参数
+### -net tap或-netdev tap/bridge参数
 
 （3）\-net tap或\-netdev tap/bridge参数
 
 使用宿主机的TAP网络接口来帮助客户机建立网络。使用网桥连接和NAT模式网络的客户机都会用到“\-net tap”参数。如“\-net nic\-net tap，ifname=tap1，script=/etc/qemu\-ifup，downscript=no”参数就是在5.5.2节中使用网桥模式网络的命令行参数。
 
-### 1.5.4 \-net dump参数
+### -net dump参数
 
 （4）\-net dump参数
 
 **转存（dump）出网络中的数据流量**，之后可以用tcpdump或Wireshark工具来分析。
 
-### 1.5.5 \-net none参数
+### -net none参数
 
 （5）\-net none参数
 
 当不需要配置任何网络设备时，需要使用“\-net none”参数，因为如果不添加“\-net”参数，则会被默认设置为“\-net nic\-net user”参数。
 
-## 1.6 图形显示相关的参数
+## 图形显示相关的参数
 
 与图形显示相关的参数如下：
 
-### 1.6.1 \-sdl参数
+### -sdl参数
 
 （1）\-sdl参数
 
@@ -193,7 +195,7 @@ qemu-system-x86_64 [options] [disk_image]
 
 如果在QEMU编译时已经将**SDL的支持编译**进去了，则qemu命令行在**默认情况**下（不加“\-sdl”）也会使用SDL方式来显示客户机。
 
-### 1.6.2 \-vnc参数
+### -vnc参数
 
 （2）\-vnc参数
 
@@ -203,13 +205,13 @@ qemu-system-x86_64 [options] [disk_image]
 
 在有SDL支持的QEMU工具中，需要使用“\-vnc”参数来让客户机显示在VNC中，如“\-vnc localhost：2”就将客户机的显示放到本机的2号VNC窗口中，然后在宿主机上可以通过“vncviewer localhost：2”连接到客户机。
 
-### 1.6.3 \-vga参数
+### -vga参数
 
 （3）\-vga参数
 
 设置客户机中的**VGA显卡类型**，默认值为“\-vga cirrus”，默认会为客户机模拟出“Cirrus Logic GD5446”显卡。可以使用“\-vga std”参数来模拟带有Bochs VBE扩展的标准VGA显卡，而“\-vga none”参数不为客户机分配VGA卡，会让VNC或SDL中都没有任何显示。
 
-### 1.6.4 \-nographic参数
+### -nographic参数
 
 （4）\-nographic参数
 
@@ -258,7 +260,7 @@ Last login: Sat Mar 18 17:45:46 on :0
 
 帮助手册中打印出了多个组合键，上面演示了用“Ctrl\+a t”组合键来控制是否显示控制台的时间戳，以及用“Ctrl\+a c”组合键在控制台（串口也重定向到控制台）与QEMU monitor之间进行切换。
 
-## 1.7 VT\-d和SR\-IOV相关的参数
+## VT-d和SR-IOV相关的参数
 
 ```
 -device driver[,prop[=value][,...]]
@@ -270,39 +272,39 @@ Last login: Sat Mar 18 17:45:46 on :0
 
 VT\-d和SR\-IOV在使用时的区别在于，VT\-d中分配的设备是一个物理PCI/PCI-e设备，而SR-IOV使用的是虚拟设备（VF，Virtual Function）。
 
-## 1.8 动态迁移的参数
+## 动态迁移的参数
 
 \-incoming port参数让qemu进程进入迁移监听（migration\-listen）模式，而不是真正以命令行中的镜像文件运行客户机。
 
 如在启动客户机的qemu命令行中添加“\-incoming tcp：0：6666”参数，表示在6666端口建立一个TCP Socket连接，用于接收来自源主机的动态迁移的内容，其中“0”表示允许来自任何主机的连接。
 
-## 1.9 已使用的其他参数
+## 已使用的其他参数
 
 已使用的其他参数如下：
 
-### 1.9.1 \-daemonize参数
+### -daemonize参数
 
 （1）\-daemonize参数
 
 在启动时让QEMU作为守护进程在后台运行。如果没有该参数，默认QEMU在启动客户机后就会占用标准输入输出，直到客户机退出。“\-daemonize”参数的使用可以让一个QEMU进程在后台运行，同时在当前位置进行其他的操作（如启动另一个客户机）。
 
-### 1.9.2 \-usb参数
+### -usb参数
 
 （2）\-usb参数
 
 开启客户机中的USB总线，如“\-usb \-usbdevice tablet”就是在客户机中**模拟USB**而**不是PS/2的键盘和鼠标**，而且使用**tablet这种类型的设备**实现鼠标的定位。
 
-### 1.9.3 \-enable\-kvm参数
+### -enable-kvm参数
 
 （3）\-enable\-kvm参数
 
 打开KVM虚拟化的支持。在RHEL发行版自带的qemu\-kvm中，“\-enable\-kvm”默认就是打开的，默认支持KVM虚拟化；而在纯QEMU中，默认没有打开KVM的支持，需要用“\-enable\-kvm”参数来配置。
 
-# 2 其他常用参数
+# 其他常用参数
 
 本节将介绍前面章节中未介绍的但也非常有用的qemu命令行参数。
 
-## 2.1 \-h显示帮助
+## -h显示帮助
 
 1. \-h显示帮助手册（也可以用man qemu，需要编译安装qemu\-doc）
 
@@ -321,7 +323,7 @@ Standard options:￼
 
 显示了当前QEMU工具中支持的所有命令行参数。
 
-## 2.2 \-version版本信息
+## -version版本信息
 
 2. \-version显示QEMU的版本信息
 
@@ -332,7 +334,7 @@ QEMU emulator version 2.7.0 (v2.7.0), Copyright (c) 2003-2016 Fabrice Bellard an
 
 显示了当前QEMU模拟器是QEMU 2.7.0版本。
 
-## 2.3 \-k键盘布局的语言
+## -k键盘布局的语言
 
 3. \-k设置键盘布局的语言
 
@@ -348,7 +350,7 @@ ar  bepo  common  cz  da  de  de-ch  en-gb  en-us  es  et  fi  fo  fr  fr-be  fr
 ca  fr-ch  hr  hu  is  it  ja  lt  lv  mk  modifiers  nl  nl-be  no  pl  pt  pt-br  ru  sl  sv  th  tr
 ```
 
-## 2.4 \-soundhw声卡硬件支持
+## -soundhw声卡硬件支持
 
 4. \-soundhw开启声卡硬件的支持
 
@@ -380,7 +382,7 @@ pcspk       PC speaker￼
 [root@kvm-guest ~]# lspci | grep -i audio￼ 00:03.0 Multimedia audio controller: Intel Corporation 82801AA AC'97 Audio Controller (rev 01)
 ```
 
-## 2.5 \-display显示方式
+## -display显示方式
 
 5. \-display设置显示方式
 
@@ -396,7 +398,7 @@ pcspk       PC speaker￼
 
 - “\-display vnc=localhost:2”表示将客户机图像输出显示到本地的**2号VNC显示端口**中（与“\-vnc localhost：2”的意义相同）。
 
-## 2.6 -name客户机名称
+## -name客户机名称
 
 6. \-name设置客户机名称
 
@@ -404,7 +406,7 @@ pcspk       PC speaker￼
 
 设置的名字将会在SDL窗口边框的标题中显示，或者在VNC窗口的标题栏中显示。
 
-## 2.7 \-uuid系统UUID
+## -uuid系统UUID
 
 7. \-uuid设置系统的UUID
 
@@ -414,7 +416,7 @@ pcspk       PC speaker￼
 
 在通过qemu命令行启动客户时添加“\-uuid 12345678\-1234\-1234\-1234\-123456789abc”参数（**UUID**是按照**8\-4\-4-4\-12**个数分布的**32个十六进制数字**），就配置了客户机的UUID，然后在QEMU monitor中也可以用“- **info uuid**”命令查询该客户机的UUID值。
 
-## 2.8 \-rtc设置RTC开始时间和时钟类型
+## -rtc设置RTC开始时间和时钟类型
 
 8. \-rtc设置RTC开始时间和时钟类型
 
@@ -446,7 +448,7 @@ pcspk       PC speaker￼
 
 某些Windows作为客户机时可能会出现时间不太准确（时间漂移）的情况，这时**QEMU**先计算出**Windows客户机**中**缺少了多少个时间中断**，然后重新将缺少的时间**中断注入**客户机中。
 
-## 2.9 存储设备URL
+## 存储设备URL
 
 9. 存储设备URL的语法参数
 
@@ -458,7 +460,7 @@ pcspk       PC speaker￼
 
 本节并不详细讲解其语法，而是举例简要介绍其基本用法。
 
-### 2.9.1 iSCSI的URL语法
+### iSCSI的URL语法
 
 （1）iSCSI的URL语法
 
@@ -488,7 +490,7 @@ qemu-system-x86_64 -iscsi \ initiator-name=iqn.2012-11.com.example:my-initiator 
 
 不过需要注意的是，在QEMU配置、**编译**时需要有**libiscsi**的支持才行（在运行\.\/configure配置时，添加\-\-**enable\-libiscsi**参数），否则QEMU可能不能支持iSCSI。
 
-### 2.9.2 NBD的URL语法
+### NBD的URL语法
 
 （2）NBD的URL语法
 
@@ -513,7 +515,7 @@ qemu-system-x86_64 -drive file=nbd:192.168.2.1:30000￼
 qemu-system-x86_64 -drive file=nbd:unix:/tmp/nbd-socket
 ```
 
-### 2.9.3 sheepdog的URL语法
+### sheepdog的URL语法
 
 （3）sheepdog的URL语法
 
@@ -538,7 +540,7 @@ qemu-system-x86_64 -drive file=sheepdog:192.168.2.1:30000:MyGuest
 
 关于sheepdog更详细的使用，可以参考：http://http://www.osrg.net/sheepdog。
 
-## 2.10 \-chardev字符型设备
+## -chardev字符型设备
 
 10. \-chardev配置字符型设备
 
@@ -550,13 +552,13 @@ qemu-system-x86_64 -drive file=sheepdog:192.168.2.1:30000:MyGuest
 
 **后端（backend**）将会决定后面可用的选项。“id=id”选项设置了该设备的唯一标识，ID可以是包含最多127个字符的字符串。每个设备必须有一个唯一的ID，它可用于其他命令行参数识别该设备。“mux=on|off”选项表示**该设备是否多路复用**。当该字符型设备被用于**多个前端（frontend**）使用时，需要启用“mux=on”这个模式。
 
-## 2.11 \-bios客户机的BIOS文件
+## -bios客户机的BIOS文件
 
 11. \-bios指定客户机的BIOS文件
 
 设置BIOS的文件名称。一般来说，QEMU会到“/**usr/local/share/qemu**/”目录下去找**BIOS文件**。但也可以使用“\-L path”参数来改变QEMU查找BIOS、VGA BIOS、keymaps等文件的目录。
 
-## 2.12 \-no\-reboot和\-no\-shutdown参数
+## -no-reboot和-no-shutdown参数
 
 12. \-no\-reboot和\-no\-shutdown参数
 
@@ -564,13 +566,13 @@ qemu-system-x86_64 -drive file=sheepdog:192.168.2.1:30000:MyGuest
 
 “\-no\-shutdown”参数让客户机执行关机（shutdown）操作时，在**系统关闭后**，**不退出！！！QEMU进程**（在**正常情况**下，**系统关闭！！！** 后就**退出！！！QEMU进程**），而是保持这个进程存在，它的QEMU monitor依然可以使用。在需要的情况下，这就允许在**关机后**切换到monitor中将磁盘**镜像的改变提交到真正的镜像文件**中。
 
-## 2.13 \-loadvm加载快照状态
+## -loadvm加载快照状态
 
 13. \-loadvm加载快照状态
 
 “\-loadvm mysnapshot”在QEMU**启动客户机**时即**加载系统的某个快照**，这与QEMU monitor中的“loadvm”命令的功能类似。
 
-## 2.14 \-pidfile保存进程ID到文件
+## -pidfile保存进程ID到文件
 
 14. \-pidfile保存进程ID到文件中
 
