--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
@@ -3,40 +3,42 @@
 
 <!-- code_chunk_output -->
 
-* [1 vCPU的概念](#1-vcpu的概念)
-	* [1.1 三种模式](#11-三种模式)
-	* [1.2 KVM下系统架构](#12-kvm下系统架构)
-* [2 SMP的支持](#2-smp的支持)
-	* [2.1 硬件支持](#21-硬件支持)
-	* [2.2 操作系统支持](#22-操作系统支持)
-	* [2.3 QEMU的支持](#23-qemu的支持)
-		* [2.3.1 \-smp参数](#231-smp参数)
-		* [2.3.2 默认不加\-smp](#232-默认不加-smp)
-		* [2.3.3 \-smp 8](#233-smp-8)
-		* [2.3.4 \-smp 8,sockets=2,cores=2,threads=2](#234-smp-8sockets2cores2threads2)
-		* [2.3.5 \-smp 4,maxcpus=8](#235-smp-4maxcpus8)
-* [3 CPU过载使用](#3-cpu过载使用)
-* [4 CPU模型](#4-cpu模型)
-	* [4.1 \-cpu ?查看所有模型](#41-cpu-查看所有模型)
-	* [4.2 不加\-cpu默认CPU模型](#42-不加-cpu默认cpu模型)
-	* [4.3 \-cpu model指定模型](#43-cpu-model指定模型)
-* [5 进程的处理器亲和性和vCPU的绑定](#5-进程的处理器亲和性和vcpu的绑定)
-	* [5.1 启动隔离](#51-启动隔离)
-	* [5.2 启动虚拟机并绑定vCPU](#52-启动虚拟机并绑定vcpu)
+- [vCPU的概念](#vcpu的概念)
+  - [vCPU的三种模式](#vcpu的三种模式)
+  - [1.2 KVM下系统架构](#12-kvm下系统架构)
+- [2 SMP的支持](#2-smp的支持)
+  - [2.1 硬件支持](#21-硬件支持)
+  - [2.2 操作系统支持](#22-操作系统支持)
+  - [2.3 QEMU的支持](#23-qemu的支持)
+    - [2.3.1 \-smp参数](#231-smp参数)
+    - [2.3.2 默认不加\-smp](#232-默认不加-smp)
+    - [2.3.3 \-smp 8](#233-smp-8)
+    - [2.3.4 \-smp 8,sockets=2,cores=2,threads=2](#234-smp-8sockets2cores2threads2)
+    - [2.3.5 \-smp 4,maxcpus=8](#235-smp-4maxcpus8)
+- [3 CPU过载使用](#3-cpu过载使用)
+- [4 CPU模型](#4-cpu模型)
+  - [4.1 \-cpu ?查看所有模型](#41-cpu-查看所有模型)
+  - [4.2 不加\-cpu默认CPU模型](#42-不加-cpu默认cpu模型)
+  - [4.3 \-cpu model指定模型](#43-cpu-model指定模型)
+- [5 进程的处理器亲和性和vCPU的绑定](#5-进程的处理器亲和性和vcpu的绑定)
+  - [5.1 启动隔离](#51-启动隔离)
+  - [5.2 启动虚拟机并绑定vCPU](#52-启动虚拟机并绑定vcpu)
 
 <!-- /code_chunk_output -->
 
-# 1 vCPU的概念
+# vCPU的概念
 
 **QEMU/KVM**为客户机提供一套完整的**硬件系统环境**，在**客户机**看来，其所拥有的CPU即是**vCPU（virtual CPU**）。
 
 在KVM环境中，**每个客户机**都是一个**标准的Linux进程（QEMU进程**），而**每一个vCPU**在宿主机中是**QEMU进程派生**的一个**普通线程**。
 
-## 1.1 三种模式
+## vCPU的三种模式
 
 在**普通的Linux系统**中，进程一般有**两种执行模式**：**内核模式**和**用户模式**。
 
-而在**KVM环境**中，增加了第3种模式：**客户模式**。vCPU在3种执行模式下的不同分工如下。
+而在**KVM环境**中，增加了第3种模式：**客户模式**。
+
+vCPU在3种执行模式下的不同分工如下。
 
 （1）用户模式（User Mode）
 
