--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
@@ -1,4 +1,26 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [bash](#bash)
+  - [性能相关的选项](#性能相关的选项)
+  - [用法示例](#用法示例)
+- [tee](#tee)
+  - [性能相关的选项](#性能相关的选项-1)
+  - [用法示例](#用法示例-1)
+- [script](#script)
+  - [性能相关的选项](#性能相关的选项-2)
+  - [用法示例](#用法示例-2)
+- [watch](#watch)
+  - [性能相关的选项](#性能相关的选项-3)
+  - [用法示例](#用法示例-3)
+- [gnumeric](#gnumeric)
+  - [性能相关的选项](#性能相关的选项-4)
+  - [用法示例](#用法示例-4)
+
+<!-- /code_chunk_output -->
+
 # bash
 
 bash是默认的Linux命令行shell。
