--- a/Shell/自定义函数.md
+++ b/Shell/自定义函数.md
@@ -1,4 +1,15 @@
-# 定义shell函数
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 定义shell函数](#1-定义shell函数)
+- [2. 函数作用域, 变量作用范围](#2-函数作用域-变量作用范围)
+- [3. 参考](#3-参考)
+
+<!-- /code_chunk_output -->
+
+# 1. 定义shell函数
 
 语法: 
 
@@ -44,13 +55,13 @@ t2.sh: line 3: fSum: command not found
 
 1、必须在调用函数地方之前，声明函数，shell脚本是逐行运行。不会像其它语言一样先预编译。一次必须在使用函数前先声明函数。所以第一句`fSum 3 2;`会失败
 
-2、`total=$(fSum 3 2);` 通过这种调用方法，我们清楚知道，在shell 中 单括号里面，可以是：命令语句。 因此，我们可以将shell中函数，看作是定义一个新的命令，它是命令，因此 各个输入参数直接用 空格分隔。 依次，命令里面获得参数方法可以通过：$0…$n得到。 $0代表函数本身。
+2、`total=$(fSum 3 2);` 通过这种调用方法，我们清楚知道，在shell 中**单括号里面**，可以是：**命令语句**。 因此，我们可以将shell中函数，看作是定义一个新的命令，它是命令，因此 各个输入参数直接用 空格分隔。 依次，命令里面获得参数方法可以通过：$0…$n得到。 $0代表函数本身。
 
-3、**函数返回值**，**只能！！！** 通过`$?`系统变量获得，直接通过=, 获得是空值。其实，我们按照上面一条理解，知道函数是一个命令，在shell获得**命令返回值**，都需要通过`$?`获得。所以输出的`$total`是空的.
+3、**函数返回值**，**只能！！！** 通过`$?`系统变量获得，直接`通过=`, 获得是**空值**。其实，我们按照上面一条理解，知道函数是一个命令，在shell获得**命令返回值**，都需要通过`$?`获得。所以输出的`$total`是**空的**.
 
 注: 
 
-# 函数作用域, 变量作用范围
+# 2. 函数作用域, 变量作用范围
 
 ```sh
 #!/bin/sh
@@ -89,7 +100,10 @@ test!
 1001
 ```
 
-注: 第一句调用了系统命令, 所以没有报错, 输出`Linux`; 后面的uname;
+注: 
+
+- 第一句调用了系统命令, 所以没有报错, 输出`Linux`; 
+- 后面的`uname;`调用了函数`uname()`, 然后打印了`test!`, `echo $?`打印函数返回值(这里有`return 100;`所以是100, 如果注销掉`return 100`会打印0, 因为运行结果成功是0)
 
 我们一起来分析下上面这个实例，可以得到如下结论：
 
@@ -100,5 +114,7 @@ test!
 3、如果需要传出其它类型函数值，可以在函数调用之前，定义变量（这个就是全局变量）。在函数内部就可以直接修改，然后在执行函数就可以读出修改过的值。
 
 4、如果需要定义自己变量，可以在函数中定义：local 变量=值 ，这时变量就是内部变量，它的修改，不会影响函数外部相同变量的值 。
+
+# 3. 参考
 
 https://www.cnblogs.com/chengmo/archive/2010/10/17/1853356.html
