--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-* [1 \#DB handler里的Stack映像](#1-db-handler里的stack映像)
+- [#DB handler里的Stack映像](#db-handler里的stack映像)
 
 <!-- /code_chunk_output -->
 
@@ -29,7 +29,7 @@
 
 上面是处理器响应Single-Step调试的示意图，处理器在执行指令mov eax，1后产生了#DB异常，在#DB handler处理完毕后，返回到指令mov eax，2位置上继续执行。
 
-# 1 \#DB handler里的Stack映像
+# #DB handler里的Stack映像
 
 在进入#DB handler执行前，处理器将Eflags寄存器和下一条指令的地址压入#DB handler的stack中，stack中的eflags寄存器TF标志为1。因此，当从#DB handler里返回产生#DB异常的下一条指令继续执行，后续会继续产生single-step调试异常（#DB），除非清TF标志位。
 
