--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
@@ -9,9 +9,11 @@
 
 <!-- /code_chunk_output -->
 
-单步调试使用**Eflags寄存器**里的**TF标志**和**RF标志位**，当Eflags.TF=1时，处理器进入Single\-step调试模式。关于single\-step另见5.3节描述。
+单步调试使用**Eflags寄存器**里的**TF标志**和**RF标志位**，当Eflags.TF=1时，处理器进入Single\-step调试模式。
 
-由**Eflags.TF标志位置位**引起的\#DB异常属于**Trap类型**，当使用**POPF指令**对Eflags.TF置位时，处理器将执行完**紧接着POPF指令后**的**第一条指令**才响应#DB异常。在进入#DB handler时，处理器会**清TF和RF标志位**。因此在#DB handler内是关闭singlestep调试的。
+关于single\-step另见5.3节描述。
+
+由**Eflags.TF标志位置位**引起的\#DB异常属于**Trap类型**，当使用**POPF指令**对Eflags.TF置位时，处理器将执行完**紧接着POPF指令后**的**第一条指令！！！** 才响应\#DB异常。在进入#DB handler时，处理器会**清TF和RF标志位**。因此在#DB handler内是关闭singlestep调试的。
 
 ```assembly
 ; 开启 single debug功能
