--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
@@ -4,6 +4,8 @@
 <!-- code_chunk_output -->
 
 - [#DB handler里的Stack映像](#db-handler里的stack映像)
+- [Breakpoint调试模式](#breakpoint调试模式)
+- [Memory和I/O地址调试模式](#memory和io地址调试模式)
 - [DB异常可以是Fault或者Trap类型，下面两类条件引发的#DB异常属于Fault类型。](#db异常可以是fault或者trap类型下面两类条件引发的db异常属于fault类型)
 - [DB handler代码和实验13-1是相同的。](#db-handler代码和实验13-1是相同的)
 
@@ -13,7 +15,7 @@
 
 关于single\-step另见5.3节描述。
 
-由**Eflags.TF标志位置位**引起的\#DB异常属于**Trap类型**，当使用**POPF指令**对Eflags.TF置位时，处理器将执行完**紧接着POPF指令后**的**第一条指令！！！** 才响应\#DB异常。在进入#DB handler时，处理器会**清TF和RF标志位**。因此在#DB handler内是关闭singlestep调试的。
+由**Eflags.TF标志位置位**引起的\#DB异常属于**Trap类型**，当使用**POPF指令**对Eflags.TF置位时，处理器将执行完**紧接着POPF指令后**的**第一条指令！！！** 才响应\#DB异常。在进入\#DB handler时，处理器会**清TF和RF标志位**。因此在\#DB **handler**内是**关闭singlestep**调试的。
 
 ```assembly
 ; 开启 single debug功能
@@ -27,25 +29,39 @@
       mov eax，5                ;test 5
 ```
 
-在上面的代码里，通过使用popf指令对eflags.TF进行置位，处理器在执行完mov eax，1指令后进入#DB handler。
+在上面的代码里，通过使用popf指令对eflags.TF进行置位，处理器在执行完`mov eax，1`指令后进入\#DB handler。
 
 ![config](./images/1.png)
 
-上面是处理器响应Single-Step调试的示意图，处理器在执行指令mov eax，1后产生了#DB异常，在#DB handler处理完毕后，返回到指令mov eax，2位置上继续执行。
+上面是处理器响应Single\-Step调试的示意图，处理器在执行指令`mov eax，1`后产生了\#DB异常，在\#DB handler处理完毕后，返回到指令`mov eax，2`位置上继续执行。
 
 # #DB handler里的Stack映像
 
-在进入#DB handler执行前，处理器将Eflags寄存器和下一条指令的地址压入#DB handler的stack中，stack中的eflags寄存器TF标志为1。因此，当从#DB handler里返回产生#DB异常的下一条指令继续执行，后续会继续产生single-step调试异常（#DB），除非清TF标志位。
+在进入\#DB handler执行前，处理器将Eflags寄存器和下一条指令的地址压入\#DB handler的stack中，stack中的eflags寄存器TF标志为1。因此，当从\#DB handler里返回产生\#DB异常的下一条指令继续执行，后续会继续产生single\-step调试异常（\#DB），除非清TF标志位。
 
 仔细观察实验5-3里的输出结果可以发现single\-step调试里的执行流程。
 
-Breakpoint调试模式
+# Breakpoint调试模式
+
 当处理器在执行过程中遇到INT3指令时会产生#BP（BreakPoint，断点）异常，关于BreakPoint调试另见10.5.4.4.9节描述。
-￼ ；； 断点调试的使用￼       mov al，[breakpoint]                                ； 保存原字节￼       mov BYTE [breakpoint]，0xcc                       ； 写入 int3 指令￼ breakpoint：￼       mov esi，msg1                                         ； 这是断点位置，引发 #BP 异常￼       call puts
+
+```
+；； 断点调试的使用￼
+      mov al，[breakpoint]                                ； 保存原字节￼
+      mov BYTE [breakpoint]，0xcc                       ； 写入 int3 指令￼
+breakpoint：￼
+      mov esi，msg1                                         ； 这是断点位置，引发 #BP 异常￼
+      call puts
+```
+
 上面这段代码在breakpoint位置上通过写入0xCC字节来构造一个BreakPoint调试环境。
 ￼
+
+
 在被调试的软件里对一个执行点下断点，debugger（调试软件）将目标位置改写为0CCh字节是最简单的设置断点的方式。如上所示，调试软件在改写前应保留断点的原字节，用来恢复原内容。
-13.3 Memory和I/O地址调试模式
+
+# Memory和I/O地址调试模式
+
 处理器提供了三类Debug Register以支持调试功能。
 ① 断点寄存器：DR0、DR1、DR2及DR3。
 ② 状态寄存器：DR6。
